最后一个提交版本

--- a/articleList/article1-1-2.html
+++ b/articleList/article1-1-2.html
@@ -2,107 +2,161 @@
 <html>
 
 <head>
-  <title>广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="viewport" content="width=device-width">
-  <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
-  <meta name="SiteDomain" content="">
-  <meta name="SiteIDCode" content="">
-  <meta name="ColumnName" content="图片新闻">
-  <meta name="ColumnDescription" content="">
-  <meta name="ColumnKeywords" content="">
-  <meta name="ColumnType" content="新闻动态">
-  <meta name="ArticleTitle" content="广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话">
-  <meta name="PubDate" content="2018-7-24 16:55">
-  <meta name="ContentSource" content="广西日报">
-  <link rel="stylesheet" href="../css/home/base.css">
-  <link rel="stylesheet" href="../css/home/head.css">
-  <link rel="stylesheet" href="../css/home/foot.css">
-  <link rel="stylesheet" href="../css/article/article.css">
+    <title>广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
+    <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
+    <meta name="SiteDomain" content="">
+    <meta name="SiteIDCode" content="">
+    <meta name="ColumnName" content="图片新闻">
+    <meta name="ColumnDescription" content="">
+    <meta name="ColumnKeywords" content="">
+    <meta name="ColumnType" content="新闻动态">
+    <meta name="ArticleTitle" content="广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话">
+    <meta name="PubDate" content="2018-7-24 16:55">
+    <meta name="ContentSource" content="广西日报">
+    <link rel="stylesheet" href="../css/home/base.css">
+    <link rel="stylesheet" href="../css/home/head.css">
+    <link rel="stylesheet" href="../css/home/foot.css">
+    <link rel="stylesheet" href="../css/article/article.css">
 </head>
 
 <body>
-  <script type="text/javascript" src="../js/tool.js"></script>
-  <div class="home-page">
-    <!-- 头部 -->
-    <div class="home-head">
-      <div class="head-link"> <span>
-          <script>document.write(getChineseData())</script>
-        </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a> </span>
-          <span class="middle"> <a>邮件系统</a> </span> <span class="middle"> <a>OA系统</a> </span> <span class="last"> 字体:
-            <span> 简体 </span> </span> </span> <span class="head-search">
-          <input placeholder="请输入搜索内容">
-          <button>搜索</button>
-        </span> </div>
-      <div class="home-head-logo"> </div>
+    <script type="text/javascript" src="../js/tool.js"></script>
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+    <div class="home-page">
+        <!-- 头部 -->
+        <div class="home-head">
+            <div class="head-link"> <span>
+                    <script>document.write(getChineseData())</script>
+                </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a>
+                    </span>
+                </span> <span class="head-search">
+                    <input placeholder="请输入搜索内容">
+                    <button>搜索</button>
+                </span> </div>
+            <div class="home-head-logo"> </div>
 
-      <!-- 兼容ie5的写法 -->
-      <div class="home-nav">
-        <ul class="nav">
-          <li><a href="../index.html">网站首页</a></li>
-          <li><a href="../component/newsPage.html">新闻动态</a></li>
-          <li><a href="../component/zwgkPage.html">政务公开</a></li>
-          <li><a>专题聚焦</a></li>
-          <li><a href="../component/hdjl.html">互动交流</a></li>
-          <li><a class="nav-last-item">网上办事</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- 页面内容 -->
-    <div class="article-path"> <a href="../index.html">
-        <span>
-          首页
-        </span>
-      </a>
-      <span>
-        <!-- 请不要看出代码 -->
-        >
-      </span>
-      <span>
-        新闻动态
-      </span></div>
-    <div class="article-box">
-      <h1 class="article-title">广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话</h1>
-      <div class="article-info"> <span>时间：2018年7月24日 16:55</span>&emsp;&emsp; <span>来源：广西日报</span>
-        <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a href="#"
-            class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin"
-            title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
-        <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
-        <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
-        <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
-            href="javascript:doZoom(10)">小</a>】</span>
-      </div>
-      <div id="article-font-size" class="article-content" align="center">
-        <p>&emsp;&emsp;7月23日，全区退役军人服务管理工作会议在南宁召开。自治区党委书记鹿心社出席并讲话，自治区党委副书记、自治区主席陈武主持会议。</p>
-        <p>&emsp;&emsp;鹿心社指出，党的十八大以来，以习近平同志为核心的党中央高度重视做好退役军人工作，在退役安置、双拥共建、烈士褒扬、优待抚恤等方面作出一系列重要决策部署。全区各地各部门要提高政治站位，树牢“四个意识”，始终在思想上政治上行动上同以习近平同志为核心的党中央保持高度一致，深入学习贯彻全国退役军人工作经验交流会精神，准确把握新时代退役军人工作新形势新要求，进一步增强责任感紧迫感，大力弘扬拥军优属的优良传统，扎扎实实做好退役军人服务管理工作，促进广大退役军人齐心协力维护好广西改革发展大局，积极投身富民兴桂事业。</p>
-        <p>&emsp;&emsp;鹿心社强调，要把解决退役军人面临的实际困难作为义不容辞的政治责任，用心用情用力、同心同向做好服务保障工作，不断提升退役军人的获得感幸福感和满意度，调动退役军人参与当地经济社会发展的积极性，激励他们继续在各行各业各条战线建功立业，为促进国家现代化建设、维护社会和谐稳定作出新的贡献。要抓好政策落实，完善服务体系，做好扶持就业创业、帮扶救助等工作，让退役军人真切感受到党和政府的温暖。要加强褒扬工作，利用“八一”建军节、春节等重要时间节点，广泛开展走访慰问活动，不断提高军人军属荣誉感，形成“一人参军、全家光荣”的良好社会氛围。要全面加强党的领导，进一步强化责任担当，分工负责、密切协作、形成合力，推动各项工作不折不扣落到实处、取得实效。</p>
-        <p>&emsp;&emsp;王小东、黄伟京、赵乐秦、彭晓春参加会议，李彬在会上通报有关工作情况。</p>
-      </div>
-    </div>
-    <script>
-      function doZoom(size) {
-        document.getElementById('article-font-size').style.fontSize = size + 'pt'
-      }
-      16 </script>
-
-    <!-- 页面尾部 -->
-    <div class="home-foot">
-      <div class="home-foot-content">
-        <div class="foot-link"> <span>友情链接:</span> <a> <img src="../public/img/7.jpg"> </a> <a> <img src="../public/img/8.jpg">
-          </a> <a> <img src="../public/img/9.jpg"> </a> <a> <img src="../public/img/10.jpg"> </a> </div>
-        <div class="foot-contact-us">
-          <p> <span> <a>联系我们</a> </span> <span> | </span> <span> <a>网站地图</a> </span> </p>
-          <p> <span> 版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号 </span> </p>
-          <p> <span> 地址：南宁市兴宁区民主路49号 邮政编码 530012 </span> </p>
-          <p> <span> 建议使用IE9以上版本、360、Chrome浏览器打开 </span> </p>
+            <!-- 兼容ie5的写法 -->
+            <div class="home-nav">
+                <ul class="nav">
+                    <li><a href="../index.html">网站首页</a></li>
+                    <li><a href="../component/newsPage.html">新闻动态</a></li>
+                    <li><a href="../component/zwgkPage.html">政务公开</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
+                    <li><a href="../component/hdjl.html">互动交流</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="foot-icon"> <img src="../public/img/red.png"> <img src="../public/img/jiucuo.png"> </div>
-      </div>
+
+        <!-- 页面内容 -->
+        <div class="article-path"> <a href="../index.html">
+                <span>
+                    首页
+                </span>
+            </a>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                新闻动态
+            </span></div>
+        <div class="article-box">
+            <h1 class="article-title">广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话</h1>
+            <div class="article-info"> <span>时间：2018年7月24日 16:55</span>&emsp;&emsp; <span>来源：广西日报</span>
+                <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a
+                        href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin"
+                        data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+                <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+                <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
+                <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
+                        href="javascript:doZoom(10)">小</a>】</span>
+            </div>
+            <div id="article-font-size" class="article-content" align="center">
+                <p>&emsp;&emsp;7月23日，全区退役军人服务管理工作会议在南宁召开。自治区党委书记鹿心社出席并讲话，自治区党委副书记、自治区主席陈武主持会议。</p>
+                <p>&emsp;&emsp;鹿心社指出，党的十八大以来，以习近平同志为核心的党中央高度重视做好退役军人工作，在退役安置、双拥共建、烈士褒扬、优待抚恤等方面作出一系列重要决策部署。全区各地各部门要提高政治站位，树牢“四个意识”，始终在思想上政治上行动上同以习近平同志为核心的党中央保持高度一致，深入学习贯彻全国退役军人工作经验交流会精神，准确把握新时代退役军人工作新形势新要求，进一步增强责任感紧迫感，大力弘扬拥军优属的优良传统，扎扎实实做好退役军人服务管理工作，促进广大退役军人齐心协力维护好广西改革发展大局，积极投身富民兴桂事业。</p>
+                <p>&emsp;&emsp;鹿心社强调，要把解决退役军人面临的实际困难作为义不容辞的政治责任，用心用情用力、同心同向做好服务保障工作，不断提升退役军人的获得感幸福感和满意度，调动退役军人参与当地经济社会发展的积极性，激励他们继续在各行各业各条战线建功立业，为促进国家现代化建设、维护社会和谐稳定作出新的贡献。要抓好政策落实，完善服务体系，做好扶持就业创业、帮扶救助等工作，让退役军人真切感受到党和政府的温暖。要加强褒扬工作，利用“八一”建军节、春节等重要时间节点，广泛开展走访慰问活动，不断提高军人军属荣誉感，形成“一人参军、全家光荣”的良好社会氛围。要全面加强党的领导，进一步强化责任担当，分工负责、密切协作、形成合力，推动各项工作不折不扣落到实处、取得实效。</p>
+                <p>&emsp;&emsp;王小东、黄伟京、赵乐秦、彭晓春参加会议，李彬在会上通报有关工作情况。</p>
+            </div>
+        </div>
+        <script>
+            function doZoom(size) {
+                document.getElementById('article-font-size').style.fontSize = size + 'pt'
+            }
+            16 </script>
+
+        <!-- 页面尾部 -->
+        <div class="home-foot">
+            <div class="home-foot-content">
+                <div class="foot-link">
+                    <span>友情链接:</span>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
+                    </a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
+                    </a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
+                    </a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
+                    </a>
+                </div>
+                <div class="foot-contact-us">
+                    <p class="first-line">
+                        <span>
+                            <a>联系我们</a>
+                        </span>
+                        <span>
+                            |
+                        </span>
+                        <span>
+                            <a>网站地图</a>
+                        </span>
+                    </p>
+
+                    <p class="second-line">
+                        <span>
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
+                        </span>
+                    </p>
+
+                    <p class="third-line">
+                        <span>
+                            地址：南宁市兴宁区民主路49号 邮政编码 530012
+                        </span>
+                    </p>
+                    <p class="fourth-line">
+                        <span>
+                            建议使用IE9以上版本、360、Chrome浏览器打开
+                        </span>
+                    </p>
+                </div>
+
+                <div class="foot-icon">
+                    <img src="../public/img/red.png">
+                    <img src="../public/img/jiucuo.png">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
 </body>
 
 </html>
