--- a/articleList/article1-2-4.html
+++ b/articleList/article1-2-4.html
@@ -2,110 +2,172 @@
 <html>
 
 <head>
-  <title>国家再次提高部分退役军人和其他优抚对象抚恤补助标准</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="viewport" content="width=device-width">
-  <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
-  <meta name="SiteDomain" content="">
-  <meta name="SiteIDCode" content="">
-  <meta name="ColumnName" content="时事新闻">
-  <meta name="ColumnDescription" content="">
-  <meta name="ColumnKeywords" content="">
-  <meta name="ColumnType" content="新闻动态">
-  <meta name="ArticleTitle" content="国家再次提高部分退役军人和其他优抚对象抚恤补助标准">
-  <meta name="PubDate" content="2018-7-27 09:56">
-  <meta name="ContentSource" content="新华网">
-  <link rel="stylesheet" href="../css/home/base.css">
-  <link rel="stylesheet" href="../css/home/head.css">
-  <link rel="stylesheet" href="../css/home/foot.css">
-  <link rel="stylesheet" href="../css/article/article.css">
+    <title>国家再次提高部分退役军人和其他优抚对象抚恤补助标准</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
+    <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
+    <meta name="SiteDomain" content="">
+    <meta name="SiteIDCode" content="">
+    <meta name="ColumnName" content="时事新闻">
+    <meta name="ColumnDescription" content="">
+    <meta name="ColumnKeywords" content="">
+    <meta name="ColumnType" content="新闻动态">
+    <meta name="ArticleTitle" content="国家再次提高部分退役军人和其他优抚对象抚恤补助标准">
+    <meta name="PubDate" content="2018-7-27 09:56">
+    <meta name="ContentSource" content="新华网">
+    <link rel="stylesheet" href="../css/home/base.css">
+    <link rel="stylesheet" href="../css/home/head.css">
+    <link rel="stylesheet" href="../css/home/foot.css">
+    <link rel="stylesheet" href="../css/article/article.css">
 </head>
 
 <body>
-  <script type="text/javascript" src="../js/tool.js"></script>
-  <div class="home-page">
-    <!-- 头部 -->
-    <div class="home-head">
-      <div class="head-link"> <span>
-          <script>document.write(getChineseData())</script>
-        </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a> </span>
-          <span class="middle"> <a>邮件系统</a> </span> <span class="middle"> <a>OA系统</a> </span> <span class="last"> 字体:
-            <span> 简体 </span> </span> </span> <span class="head-search">
-          <input placeholder="请输入搜索内容">
-          <button>搜索</button>
-        </span> </div>
-      <div class="home-head-logo"> </div>
+    <script type="text/javascript" src="../js/tool.js"></script>
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+    <div class="home-page">
+        <!-- 头部 -->
+        <div class="home-head">
+            <div class="head-link"> <span>
+                    <script>document.write(getChineseData())</script>
+                </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a>
+                    </span>
+                </span> <span class="head-search">
+                    <input placeholder="请输入搜索内容">
+                    <button>搜索</button>
+                </span> </div>
+            <div class="home-head-logo"> </div>
 
-      <!-- 兼容ie5的写法 -->
-      <div class="home-nav">
-        <ul class="nav">
-          <li><a href="../index.html">网站首页</a></li>
-          <li><a href="../component/newsPage.html">新闻动态</a></li>
-          <li><a href="../component/zwgkPage.html">政务公开</a></li>
-          <li><a>专题聚焦</a></li>
-          <li><a href="../component/hdjl.html">互动交流</a></li>
-          <li><a class="nav-last-item">网上办事</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- 页面内容 -->
-    <div class="article-path"> <a href="../index.html">
-        <span>
-          首页
-        </span>
-      </a>
-      <span>
-        <!-- 请不要看出代码 -->
-        >
-      </span>
-      <span>
-        新闻动态
-      </span></div>
-    <div class="article-box">
-      <h1 class="article-title">国家再次提高部分退役军人和其他优抚对象抚恤补助标准</h1>
-      <div class="article-info"> <span>时间：2018年7月27日 09:56</span>&emsp;&emsp; <span>来源：新华网</span>
-        <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a href="#"
-            class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin"
-            title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
-        <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
-        <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
-        <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
-            href="javascript:doZoom(10)">小</a>】</span>
-      </div>
-      <div id="article-font-size" class="article-content" align="center">
-        <p>&emsp;&emsp;新华社北京７月２７日电（记者梅世雄）记者２７日从退役军人事务部了解到，退役军人事务部、财政部日前发出通知，再次提高部分退役军人和其他优抚对象等人员抚恤和生活补助标准。</p>
-        <p>&emsp;&emsp;据了解，从８月１日起，伤残人员（残疾军人、伤残人民警察、伤残国家机关工作人员、伤残民兵民工）残疾抚恤金标准、“三属”（烈士遗属、因公牺牲军人遗属、病故军人遗属）定期抚恤金标准、“三红”（在乡退伍红军老战士、在乡西路军红军老战士、红军失散人员）生活补助标准，在现行基础上提高１０％，在乡老复员军人生活补助标准在现行基础上每人每年提高１２００元，烈士老年子女生活补助标准由现行每人每月３９０元提高至４４０元，以上提标经费由中央财政承担。</p>
-        <p>&emsp;&emsp;带病回乡退伍军人生活补助标准由现行每人每月５００元提高至５５０元、参战参试退役军人生活补助标准由现行每人每月５５０元提高至６００元，农村籍老义务兵每服一年义务兵役每月增加补助５元，达到每月３５元。以上提标经费由中央财政和地方财政按比例承担。</p>
-        <p>&emsp;&emsp;提高后，一级因战、因公、因病残疾军人抚恤金标准分别为每人每年８０１４０元、７７６１０元、７５０６０元，分别比２０１７年提高了７２９０元、７０６０元、６８２０元。</p>
-        <p>&emsp;&emsp;烈属、因公牺牲军人遗属、病故军人遗属定期抚恤金标准分别提高到每人每年２５４４０元、２１８５０元和２０５５０元。在乡退伍红军老战士、在乡西路军红军老战士和红军失散人员生活补助标准，分别提高到每人每年５５５７０元、５５５７０元和２５０７０元。</p>
-        <p>&emsp;&emsp;据了解，往年通常在１０月１日提高部分退役军人和其他优抚对象等人员抚恤补助标准，今年将提标时间提前到８月１日，主要考虑到广大军人军属和退役军人对“八一”建军节的特殊情感，体现党和政府对退役军人和其他优抚对象的关心关爱。</p>
-        <p>&emsp;&emsp;自改革开放以来，国家已第２５次提高残疾军人残疾抚恤金标准，第２８次提高“三属”定期抚恤金标准和“三红”生活补助标准。</p>
-      </div>
-    </div>
-    <script>
-      function doZoom(size) {
-        document.getElementById('article-font-size').style.fontSize = size + 'pt'
-      }
-      16 </script>
-
-    <!-- 页面尾部 -->
-    <div class="home-foot">
-      <div class="home-foot-content">
-        <div class="foot-link"> <span>友情链接:</span> <a> <img src="../public/img/7.jpg"> </a> <a> <img src="../public/img/8.jpg">
-          </a> <a> <img src="../public/img/9.jpg"> </a> <a> <img src="../public/img/10.jpg"> </a> </div>
-        <div class="foot-contact-us">
-          <p> <span> <a>联系我们</a> </span> <span> | </span> <span> <a>网站地图</a> </span> </p>
-          <p> <span> 版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号 </span> </p>
-          <p> <span> 地址：南宁市兴宁区民主路49号 邮政编码 530012 </span> </p>
-          <p> <span> 建议使用IE9以上版本、360、Chrome浏览器打开 </span> </p>
+            <!-- 兼容ie5的写法 -->
+            <div class="home-nav">
+                <ul class="nav">
+                    <li><a href="../index.html">网站首页</a></li>
+                    <li><a href="../component/newsPage.html">新闻动态</a></li>
+                    <li><a href="../component/zwgkPage.html">政务公开</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
+                    <li><a href="../component/hdjl.html">互动交流</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="foot-icon"> <img src="../public/img/red.png"> <img src="../public/img/jiucuo.png"> </div>
-      </div>
+
+        <!-- 页面内容 -->
+        <div class="article-path"> <a href="../index.html">
+                <span>
+                    首页
+                </span>
+            </a>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                新闻动态
+            </span>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                时事新闻
+            </span>
+        </div>
+        <div class="article-box">
+            <h1 class="article-title">国家再次提高部分退役军人和其他优抚对象抚恤补助标准</h1>
+            <div class="article-info"> <span>时间：2018年7月27日 09:56</span>&emsp;&emsp; <span>来源：新华网</span>
+                <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a
+                        href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin"
+                        data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+                <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+                <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
+                <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
+                        href="javascript:doZoom(10)">小</a>】</span>
+            </div>
+            <div id="article-font-size" class="article-content" align="center">
+                <p>&emsp;&emsp;新华社北京７月２７日电（记者梅世雄）记者２７日从退役军人事务部了解到，退役军人事务部、财政部日前发出通知，再次提高部分退役军人和其他优抚对象等人员抚恤和生活补助标准。</p>
+                <p>&emsp;&emsp;据了解，从８月１日起，伤残人员（残疾军人、伤残人民警察、伤残国家机关工作人员、伤残民兵民工）残疾抚恤金标准、“三属”（烈士遗属、因公牺牲军人遗属、病故军人遗属）定期抚恤金标准、“三红”（在乡退伍红军老战士、在乡西路军红军老战士、红军失散人员）生活补助标准，在现行基础上提高１０％，在乡老复员军人生活补助标准在现行基础上每人每年提高１２００元，烈士老年子女生活补助标准由现行每人每月３９０元提高至４４０元，以上提标经费由中央财政承担。</p>
+                <p>&emsp;&emsp;带病回乡退伍军人生活补助标准由现行每人每月５００元提高至５５０元、参战参试退役军人生活补助标准由现行每人每月５５０元提高至６００元，农村籍老义务兵每服一年义务兵役每月增加补助５元，达到每月３５元。以上提标经费由中央财政和地方财政按比例承担。</p>
+                <p>&emsp;&emsp;提高后，一级因战、因公、因病残疾军人抚恤金标准分别为每人每年８０１４０元、７７６１０元、７５０６０元，分别比２０１７年提高了７２９０元、７０６０元、６８２０元。</p>
+                <p>&emsp;&emsp;烈属、因公牺牲军人遗属、病故军人遗属定期抚恤金标准分别提高到每人每年２５４４０元、２１８５０元和２０５５０元。在乡退伍红军老战士、在乡西路军红军老战士和红军失散人员生活补助标准，分别提高到每人每年５５５７０元、５５５７０元和２５０７０元。</p>
+                <p>&emsp;&emsp;据了解，往年通常在１０月１日提高部分退役军人和其他优抚对象等人员抚恤补助标准，今年将提标时间提前到８月１日，主要考虑到广大军人军属和退役军人对“八一”建军节的特殊情感，体现党和政府对退役军人和其他优抚对象的关心关爱。</p>
+                <p>&emsp;&emsp;自改革开放以来，国家已第２５次提高残疾军人残疾抚恤金标准，第２８次提高“三属”定期抚恤金标准和“三红”生活补助标准。</p>
+            </div>
+        </div>
+        <script>
+            function doZoom(size) {
+                document.getElementById('article-font-size').style.fontSize = size + 'pt'
+            }
+            16 </script>
+
+        <!-- 页面尾部 -->
+        <div class="home-foot">
+            <div class="home-foot-content">
+                <div class="foot-link">
+                    <span>友情链接:</span>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
+                    </a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
+                    </a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
+                    </a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
+                    </a>
+                </div>
+                <div class="foot-contact-us">
+                    <p class="first-line">
+                        <span>
+                            <a>联系我们</a>
+                        </span>
+                        <span>
+                            |
+                        </span>
+                        <span>
+                            <a>网站地图</a>
+                        </span>
+                    </p>
+
+                    <p class="second-line">
+                        <span>
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
+                        </span>
+                    </p>
+
+                    <p class="third-line">
+                        <span>
+                            地址：南宁市兴宁区民主路49号 邮政编码 530012
+                        </span>
+                    </p>
+                    <p class="fourth-line">
+                        <span>
+                            建议使用IE9以上版本、360、Chrome浏览器打开
+                        </span>
+                    </p>
+                </div>
+
+                <div class="foot-icon">
+                    <img src="../public/img/red.png">
+                    <img src="../public/img/jiucuo.png">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
 </body>
 
 </html>
