--- a/articleList/article1-3-1.html
+++ b/articleList/article1-3-1.html
@@ -2,110 +2,172 @@
 <html>
 
 <head>
-  <title>广西壮族自治区退役军人事务厅正式挂牌</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="viewport" content="width=device-width">
-  <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
-  <meta name="SiteDomain" content="">
-  <meta name="SiteIDCode" content="">
-  <meta name="ColumnName" content="全区动态">
-  <meta name="ColumnDescription" content="">
-  <meta name="ColumnKeywords" content="">
-  <meta name="ColumnType" content="新闻动态">
-  <meta name="ArticleTitle" content="广西壮族自治区退役军人事务厅正式挂牌">
-  <meta name="PubDate" content="2018-11-22 17:10">
-  <meta name="ContentSource" content="广西壮族自治区退役军人事务厅">
-  <link rel="stylesheet" href="../css/home/base.css">
-  <link rel="stylesheet" href="../css/home/head.css">
-  <link rel="stylesheet" href="../css/home/foot.css">
-  <link rel="stylesheet" href="../css/article/article.css">
+    <title>广西壮族自治区退役军人事务厅正式挂牌</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
+    <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
+    <meta name="SiteDomain" content="">
+    <meta name="SiteIDCode" content="">
+    <meta name="ColumnName" content="全区动态">
+    <meta name="ColumnDescription" content="">
+    <meta name="ColumnKeywords" content="">
+    <meta name="ColumnType" content="新闻动态">
+    <meta name="ArticleTitle" content="广西壮族自治区退役军人事务厅正式挂牌">
+    <meta name="PubDate" content="2018-11-22 17:10">
+    <meta name="ContentSource" content="广西壮族自治区退役军人事务厅">
+    <link rel="stylesheet" href="../css/home/base.css">
+    <link rel="stylesheet" href="../css/home/head.css">
+    <link rel="stylesheet" href="../css/home/foot.css">
+    <link rel="stylesheet" href="../css/article/article.css">
 </head>
 
 <body>
-  <script type="text/javascript" src="../js/tool.js"></script>
-  <div class="home-page">
-    <!-- 头部 -->
-    <div class="home-head">
-      <div class="head-link"> <span>
-          <script>document.write(getChineseData())</script>
-        </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a> </span>
-          <span class="middle"> <a>邮件系统</a> </span> <span class="middle"> <a>OA系统</a> </span> <span class="last"> 字体:
-            <span> 简体 </span> </span> </span> <span class="head-search">
-          <input placeholder="请输入搜索内容">
-          <button>搜索</button>
-        </span> </div>
-      <div class="home-head-logo"> </div>
+    <script type="text/javascript" src="../js/tool.js"></script>
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+    <div class="home-page">
+        <!-- 头部 -->
+        <div class="home-head">
+            <div class="head-link"> <span>
+                    <script>document.write(getChineseData())</script>
+                </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a>
+                    </span>
+                </span> <span class="head-search">
+                    <input placeholder="请输入搜索内容">
+                    <button>搜索</button>
+                </span> </div>
+            <div class="home-head-logo"> </div>
 
-      <!-- 兼容ie5的写法 -->
-      <div class="home-nav">
-        <ul class="nav">
-          <li><a href="../index.html">网站首页</a></li>
-          <li><a href="../component/newsPage.html">新闻动态</a></li>
-          <li><a href="../component/zwgkPage.html">政务公开</a></li>
-          <li><a>专题聚焦</a></li>
-          <li><a href="../component/hdjl.html">互动交流</a></li>
-          <li><a class="nav-last-item">网上办事</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- 页面内容 -->
-    <div class="article-path"> <a href="../index.html">
-        <span>
-          首页
-        </span>
-      </a>
-      <span>
-        <!-- 请不要看出代码 -->
-        >
-      </span>
-      <span>
-        新闻动态
-      </span></div>
-    <div class="article-box">
-      <h1 class="article-title">广西壮族自治区退役军人事务厅正式挂牌</h1>
-      <div class="article-info"> <span>时间：2018年11月22日 17:10</span>&emsp;&emsp; <span>来源：广西壮族自治区退役军人事务厅</span>
-        <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a href="#"
-            class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin"
-            title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
-        <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
-        <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
-        <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
-            href="javascript:doZoom(10)">小</a>】</span>
-      </div>
-      <div id="article-font-size" class="article-content" align="center">
-        <p>&emsp;&emsp;2018年11月20日上午，新组建的广西壮族自治区退役军人事务厅正式挂牌。自治区党委常委、广西军区政治委员姜英宇，南部战区陆军政治工作部主任祝运璇，自治区副主席李彬出席挂牌仪式并为自治区退役军人事务厅揭牌。自治区退役军人事务厅党组书记周长青主持仪式，自治区民政厅相关领导、自治区退役军人事务厅领导班子成员、事业单位主要负责人以及转隶到退役军人事务厅的全体工作人员共同见证了这一历史时刻。</p>
-        <img src="http://www.mva.gov.cn/xinwen/dfdt/201811/W020181122622010239263.jpg" />
-        <p>&emsp;&emsp;根据《广西壮族自治区机构改革方案》，将自治区民政厅的退役军人优抚安置职责，自治区人力资源和社会保障厅的军官转业安置职责，以及军队有关职责等整合，组建自治区退役军人事务厅，作为自治区政府组成部门。主要职责是落实党中央、国务院和自治区党委、政府关于退役军人工作的方针政策和决策部署，维护退役军人军属合法权益，做好安置转业，促进就业创业，让军人成为全社会尊崇的职业。</p>
-        <img src="http://www.mva.gov.cn/xinwen/dfdt/201811/W020181122622010327462.jpg" />
-        <p>&emsp;&emsp;自治区退役军人事务厅党组书记周长青表示，作为一个全新机构，将在自治区党委、自治区人民政府的领导下，紧紧围绕服务广西“两个建成”目标，以拥军优抚强军为根本宗旨，以促进实现退役军人军属对美好生活需求为根本出发点和归属点，以提高保障能力和服务效率为主线，同心同德、团结一致、振奋精神、开拓进取，当好全区退役军人的服务员，真正把实事办实、好事办好，努力构建具有新时代特征和广西特色的退役军人服务保障体系。</p>
-        <img src="http://www.mva.gov.cn/xinwen/dfdt/201811/W020181122622010388201.jpg" />
-        <p>&emsp;&emsp;当天，新挂牌的自治区退役军人事务厅发表了《致全区退役军人的公开信》，向全区退役军人致以崇高的敬意和衷心的祝福！</p>
-      </div>
-    </div>
-    <script>
-      function doZoom(size) {
-        document.getElementById('article-font-size').style.fontSize = size + 'pt'
-      }
-      16 </script>
-
-    <!-- 页面尾部 -->
-    <div class="home-foot">
-      <div class="home-foot-content">
-        <div class="foot-link"> <span>友情链接:</span> <a> <img src="../public/img/7.jpg"> </a> <a> <img src="../public/img/8.jpg">
-          </a> <a> <img src="../public/img/9.jpg"> </a> <a> <img src="../public/img/10.jpg"> </a> </div>
-        <div class="foot-contact-us">
-          <p> <span> <a>联系我们</a> </span> <span> | </span> <span> <a>网站地图</a> </span> </p>
-          <p> <span> 版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号 </span> </p>
-          <p> <span> 地址：南宁市兴宁区民主路49号 邮政编码 530012 </span> </p>
-          <p> <span> 建议使用IE9以上版本、360、Chrome浏览器打开 </span> </p>
+            <!-- 兼容ie5的写法 -->
+            <div class="home-nav">
+                <ul class="nav">
+                    <li><a href="../index.html">网站首页</a></li>
+                    <li><a href="../component/newsPage.html">新闻动态</a></li>
+                    <li><a href="../component/zwgkPage.html">政务公开</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
+                    <li><a href="../component/hdjl.html">互动交流</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="foot-icon"> <img src="../public/img/red.png"> <img src="../public/img/jiucuo.png"> </div>
-      </div>
+
+        <!-- 页面内容 -->
+        <div class="article-path"> <a href="../index.html">
+                <span>
+                    首页
+                </span>
+            </a>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                新闻动态
+            </span>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                全区动态
+            </span>
+        </div>
+        <div class="article-box">
+            <h1 class="article-title">广西壮族自治区退役军人事务厅正式挂牌</h1>
+            <div class="article-info"> <span>时间：2018年11月22日 17:10</span>&emsp;&emsp; <span>来源：广西壮族自治区退役军人事务厅</span>
+                <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a
+                        href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin"
+                        data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+                <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+                <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
+                <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
+                        href="javascript:doZoom(10)">小</a>】</span>
+            </div>
+            <div id="article-font-size" class="article-content" align="center">
+                <p>&emsp;&emsp;2018年11月20日上午，新组建的广西壮族自治区退役军人事务厅正式挂牌。自治区党委常委、广西军区政治委员姜英宇，南部战区陆军政治工作部主任祝运璇，自治区副主席李彬出席挂牌仪式并为自治区退役军人事务厅揭牌。自治区退役军人事务厅党组书记周长青主持仪式，自治区民政厅相关领导、自治区退役军人事务厅领导班子成员、事业单位主要负责人以及转隶到退役军人事务厅的全体工作人员共同见证了这一历史时刻。</p>
+                <img src="http://www.mva.gov.cn/xinwen/dfdt/201811/W020181122622010239263.jpg" />
+                <p>&emsp;&emsp;根据《广西壮族自治区机构改革方案》，将自治区民政厅的退役军人优抚安置职责，自治区人力资源和社会保障厅的军官转业安置职责，以及军队有关职责等整合，组建自治区退役军人事务厅，作为自治区政府组成部门。主要职责是落实党中央、国务院和自治区党委、政府关于退役军人工作的方针政策和决策部署，维护退役军人军属合法权益，做好安置转业，促进就业创业，让军人成为全社会尊崇的职业。</p>
+                <img src="http://www.mva.gov.cn/xinwen/dfdt/201811/W020181122622010327462.jpg" />
+                <p>&emsp;&emsp;自治区退役军人事务厅党组书记周长青表示，作为一个全新机构，将在自治区党委、自治区人民政府的领导下，紧紧围绕服务广西“两个建成”目标，以拥军优抚强军为根本宗旨，以促进实现退役军人军属对美好生活需求为根本出发点和归属点，以提高保障能力和服务效率为主线，同心同德、团结一致、振奋精神、开拓进取，当好全区退役军人的服务员，真正把实事办实、好事办好，努力构建具有新时代特征和广西特色的退役军人服务保障体系。</p>
+                <img src="http://www.mva.gov.cn/xinwen/dfdt/201811/W020181122622010388201.jpg" />
+                <p>&emsp;&emsp;当天，新挂牌的自治区退役军人事务厅发表了《致全区退役军人的公开信》，向全区退役军人致以崇高的敬意和衷心的祝福！</p>
+            </div>
+        </div>
+        <script>
+            function doZoom(size) {
+                document.getElementById('article-font-size').style.fontSize = size + 'pt'
+            }
+            16 </script>
+
+        <!-- 页面尾部 -->
+        <div class="home-foot">
+            <div class="home-foot-content">
+                <div class="foot-link">
+                    <span>友情链接:</span>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
+                    </a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
+                    </a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
+                    </a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
+                    </a>
+                </div>
+                <div class="foot-contact-us">
+                    <p class="first-line">
+                        <span>
+                            <a>联系我们</a>
+                        </span>
+                        <span>
+                            |
+                        </span>
+                        <span>
+                            <a>网站地图</a>
+                        </span>
+                    </p>
+
+                    <p class="second-line">
+                        <span>
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
+                        </span>
+                    </p>
+
+                    <p class="third-line">
+                        <span>
+                            地址：南宁市兴宁区民主路49号 邮政编码 530012
+                        </span>
+                    </p>
+                    <p class="fourth-line">
+                        <span>
+                            建议使用IE9以上版本、360、Chrome浏览器打开
+                        </span>
+                    </p>
+                </div>
+
+                <div class="foot-icon">
+                    <img src="../public/img/red.png">
+                    <img src="../public/img/jiucuo.png">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
 </body>
 
 </html>
