--- a/articleList/article6-2-1.html
+++ b/articleList/article6-2-1.html
@@ -2,131 +2,192 @@
 <html>
 
 <head>
-  <title>“珠还合浦”正逢时——庆祝自治区60华诞特别报道之“一带一路”篇</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="viewport" content="width=device-width">
-  <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
-  <meta name="SiteDomain" content="">
-  <meta name="SiteIDCode" content="">
-  <meta name="ColumnName" content="一带一路">
-  <meta name="ColumnDescription" content="">
-  <meta name="ColumnKeywords" content="">
-  <meta name="ColumnType" content="聚焦广西">
-  <meta name="ArticleTitle" content="“珠还合浦”正逢时——庆祝自治区60华诞特别报道之“一带一路”篇">
-  <meta name="PubDate" content="2018-11-30 07:39">
-  <meta name="ContentSource" content="广西日报">
-  <link rel="stylesheet" href="../css/home/base.css">
-  <link rel="stylesheet" href="../css/home/head.css">
-  <link rel="stylesheet" href="../css/home/foot.css">
-  <link rel="stylesheet" href="../css/article/article.css">
+    <title>“珠还合浦”正逢时——庆祝自治区60华诞特别报道之“一带一路”篇</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
+    <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
+    <meta name="SiteDomain" content="">
+    <meta name="SiteIDCode" content="">
+    <meta name="ColumnName" content="一带一路">
+    <meta name="ColumnDescription" content="">
+    <meta name="ColumnKeywords" content="">
+    <meta name="ColumnType" content="聚焦广西">
+    <meta name="ArticleTitle" content="“珠还合浦”正逢时——庆祝自治区60华诞特别报道之“一带一路”篇">
+    <meta name="PubDate" content="2018-11-30 07:39">
+    <meta name="ContentSource" content="广西日报">
+    <link rel="stylesheet" href="../css/home/base.css">
+    <link rel="stylesheet" href="../css/home/head.css">
+    <link rel="stylesheet" href="../css/home/foot.css">
+    <link rel="stylesheet" href="../css/article/article.css">
 </head>
 
 <body>
-  <script type="text/javascript" src="../js/tool.js"></script>
-  <div class="home-page">
-    <!-- 头部 -->
-    <div class="home-head">
-      <div class="head-link"> <span>
-          <script>document.write(getChineseData())</script>
-        </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a> </span>
-          <span class="middle"> <a>邮件系统</a> </span> <span class="middle"> <a>OA系统</a> </span> <span class="last"> 字体:
-            <span> 简体 </span> </span> </span> <span class="head-search">
-          <input placeholder="请输入搜索内容">
-          <button>搜索</button>
-        </span> </div>
-      <div class="home-head-logo"> </div>
+    <script type="text/javascript" src="../js/tool.js"></script>
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+    <div class="home-page">
+        <!-- 头部 -->
+        <div class="home-head">
+            <div class="head-link"> <span>
+                    <script>document.write(getChineseData())</script>
+                </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a>
+                    </span>
+                </span> <span class="head-search">
+                    <input placeholder="请输入搜索内容">
+                    <button>搜索</button>
+                </span> </div>
+            <div class="home-head-logo"> </div>
 
-      <!-- 兼容ie5的写法 -->
-      <div class="home-nav">
-        <ul class="nav">
-          <li><a href="../index.html">网站首页</a></li>
-          <li><a href="../component/newsPage.html">新闻动态</a></li>
-          <li><a href="../component/zwgkPage.html">政务公开</a></li>
-          <li><a>专题聚焦</a></li>
-          <li><a href="../component/hdjl.html">互动交流</a></li>
-          <li><a class="nav-last-item">网上办事</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- 页面内容 -->
-    <div class="article-path"> <a href="../index.html">
-        <span>
-          首页
-        </span>
-      </a>
-      <span>
-        <!-- 请不要看出代码 -->
-        >
-      </span>
-      <span>
-        新闻动态
-      </span></div>
-    <div class="article-box">
-      <h1 class="article-title">“珠还合浦”正逢时——庆祝自治区60华诞特别报道之“一带一路”篇</h1>
-      <div class="article-info"> <span>时间：2018年11月30日 07:39</span>&emsp;&emsp; <span>来源：广西日报</span>
-        <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a href="#"
-            class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin"
-            title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
-        <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
-        <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
-        <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
-            href="javascript:doZoom(10)">小</a>】</span>
-      </div>
-      <div id="article-font-size" class="article-content" align="center">
-        <p>&emsp;&emsp;</p>
-        <img src="http://d.gxzf.gov.cn/image/uploadpic/2018/11/30/afae3e2c56dac7c31af5cf8a63bca91c.jpg" /></p>
-        <p style="text-indent: 2em;"><span style="color: rgb(0, 0, 255);">10月20日，埃塞俄比亚一家糖厂竣工投产之后顺利产出优质原糖，项目现场一阵欢呼。该项目由广西建工一安公司承建，随着“一带一路”建设深入推进，广西企业加快了“走出去”步伐。
-            龚有东 卓能哺 摄</span></p>
-        <p style="text-indent: 2em;">11月20日，钦州港东站，一列海铁联运集装箱班列正装载，目的地是重庆、昆明等地。“以前货物少，半天才装一车，现在一天能装满3列车。”广西沿海铁路公司钦州港站站长黄光辉说，2015年钦州港东站设立时，每天只有1人值守，现在每天至少要安排10人值班。</p>
-        <p style="text-indent: 2em;">钦州港东站的繁忙景象，只是国际陆海贸易新通道上的一个缩影。近年来，广西全力参与“一带一路”建设，积极构建“南向、北联、东融、西合”全面开放新格局。东邻粤港澳、南濒北部湾、面向东南亚、背靠大西南，八桂大地已由昔日南疆一隅，蝶变为中国面向东盟开放合作的主要平台、“一带一路”有机衔接的重要门户。</p>
-        <p style="text-indent: 2em;">2000多年前，北部湾畔的合浦帆樯林立，中国的海船以这里为始发港，启程远航印度洋沿岸各国。2000多年后的今天，怀着向海而兴梦想的八桂儿女，承载“三大定位”新使命，融入“一带一路”大格局，“珠还合浦”正逢时！</p>
-        <p style="text-indent: 2em;"><strong>互联互通大跨越</strong></p>
-        <p style="text-indent: 2em;">11月12日，中国与新加坡签署谅解备忘录，“南向通道”正式更名为“国际陆海贸易新通道”。</p>
-        <p style="text-indent: 2em;">这次更名，意味着在中新互联互通项目框架下，国际陆海贸易新通道的内涵更深，外延更广，建设内容从物流、基础设施等“硬联通”，扩展到数据、金融等领域的“软联通”，其建设目的除了重点打造中国西部与东盟的利益共同体之外，还将带动“一带一路”沿线国家和地区合作。</p>
-        <p style="text-indent: 2em;">自去年9月首列海铁联运班列开通以来，国际陆海贸易新通道发展迅速。目前，已开通北部湾港至西部6省市的8条铁海联运班列。截至10月26日，累计开行铁海联运班列840列、发运集装箱41589标箱。</p>
-        <p style="text-indent: 2em;">国际陆海贸易新通道建设，为广西加快发展、实现弯道超车提供了难得的机遇。“作为海上互联互通的重要节点，广西北部湾港航线实现了对东盟国家主要港口全覆盖，并与100多个国家和地区的200多个港口通航，构建起四通八达的‘海上高速路’，成为中国西部地区面向东盟国家的重要物流集散基地。”广西北部湾国际港务集团董事长周小溪表示，目前广西北部湾港年货物吞吐能力超过2亿吨，形成了内陆腹地走向东南亚、印度洋、太平洋、地中海等地的海上大通道。</p>
-        <p style="text-indent: 2em;">陆路方面，国际陆海贸易新通道的跨境公路运输、铁海联运和国际铁路联运也相继开通并实现常态化运行。今年3月，作为中欧班列向南的延伸，越南国际班列正式开通，途经南宁，再由凭祥口岸出境，直达越南河内。</p>
-        <p style="text-indent: 2em;">凭祥是国际陆海贸易新通道的陆路重要节点，广西已开通凭祥-海防港、凭祥-河内-胡志明、凭祥-越南-老挝沙湾拿吉-泰国穆达汉-马来西亚黑木山的“三条黄金物流线路”，是中国连接中南半岛陆路距离最短的物流线路。</p>
-        <p style="text-indent: 2em;">按“十三五”规划，广西将有5条高速公路通达边境口岸，其中越南河内连接友谊关的高速公路预计在2020年全线贯通。广西与东盟正加速形成海陆通道相辅相成、互相支撑的对外大通道格局。</p>
-        <p style="text-indent: 2em;"><strong>桂企走向五大洲</strong></p>
-        <p style="text-indent: 2em;">随着“一带一路”建设如火如荼地开展，广西企业积极开拓“一带一路”市场，就像种子被风吹到世界各地，生根发芽。目前，广西企业“走出去”已覆盖五大洲80多个国家和地区，其中“一带一路”沿线国家项目数占比达83.6%。2017年，广西与“一带一路”沿线国家贸易额2100.2亿元，</p>
-        <p style="text-indent: 2em;">10月23日，中国-乌干达国际产能合作工业园一期项目正式投产。作为“一带一路”国际合作框架下的中乌产能合作示范项目，该园区将解决当地3000多人的就业问题。</p>
-        <p style="text-indent: 2em;">这一项目的EPC总承包方是广西柳州十一冶集团，其在建工程项目涉及巴基斯坦、叙利亚、马来西亚、刚果、哈萨克斯坦、越南、阿塞拜疆、缅甸、乌干达等十多个海外国家。</p>
-        <p style="text-indent: 2em;">近4年里，来自柳州的工人们在非洲大地，将一片草莽荒原建设成为灯火通明的现代工业园区。园区物流负责人刘洋说，中国企业在“一带一路”建设中不只注重经济效益，他们会挖井拉电，修路建学校，与周围村民交朋友，给这个原本落后的地区带来显著变化。</p>
-        <p style="text-indent: 2em;">柳州五菱在印尼，实现了产业生态的创新——不但自己“走出去”，还带动一大批配套企业抱团同去。上汽通用五菱印尼产业园区，是我国在印尼投资额最大的制造业项目。去年7月，项目竣工投产，年产12万辆整车。这是完全由中国汽车企业由内向外输出知识产权、品牌与产品、人力资本与团队，业务运营及管理模式的经典案例。</p>
-        <p style="text-indent: 2em;">广西企业走出去的另一大创新是校企合作。上汽通用五菱在印尼办厂，需要大量的熟练工人和高级技术人才。柳州市城市职业学院和上汽通用五菱合作，依托当地的职业院校开设汽车培训中心，开展境外招生和职业教育培训，2015年招收了近200名印尼学生，第一批63名留学生回到印尼基地工作，成为中坚力量。</p>
-        <p style="text-indent: 2em;">“印尼项目让我们接触到了更加丰富多元的海外市场，也把我们的企业文化和产品标准带到了当地。”上汽通用五菱海外事业高级总监张子盛说。</p>
-        <p style="text-indent: 2em;"><strong>“数字丝路”共筑就</strong></p>
-        <p style="text-indent: 2em;">在今年举办的第15届东博会上，来自非洲的乐器、手工艺品等，令市民耳目一新。这是东博会首次有了“非洲元素”。坦桑尼亚担任本届东博会特邀合作伙伴，是海上丝绸之路延长线上的非洲国家首次出任东博会特邀合作伙伴。这标志着东博会服务“一带一路”建设、拓展国际合作领域平台作用和品牌影响力不断扩大，见证了东博会的合作区域首次走出亚太地区。</p>
-        <p style="text-indent: 2em;">中国-东盟博览会秘书处秘书长王雷表示，非洲国家的参会，是东博会在更广泛合作区域服务“一带一路”的新突破。</p>
-        <p style="text-indent: 2em;">除了传统的投资与贸易主题，东博会还不断把握时代脉搏，在信息数据领域努力开创交流平台，推动中国与东盟各国的数字经济合作，共同建设中国-东盟信息港，为企业搭建了共享数字经济信息、发展数字经济技术、培养数字经济人才的交流与合作平台。</p>
-        <p style="text-indent: 2em;">近4年来，在中国与东盟国家共同努力下，双方信息化领域合作不断深化。中国-东盟信息港建设全面铺开，信息港南宁核心基地等一批立足广西、面向东盟的重点工程相继落地，中越、中老、中缅等跨境陆缆和亚太2号等国际海缆为中国与东盟国家搭起了高速信息通道。目前，中国-东盟信息港已建成或投入运营的项目有30个，正在推进建设的项目42个。（胡铁军）</p>
-      </div>
-    </div>
-    <script>
-      function doZoom(size) {
-        document.getElementById('article-font-size').style.fontSize = size + 'pt'
-      }
-      16 </script>
-
-    <!-- 页面尾部 -->
-    <div class="home-foot">
-      <div class="home-foot-content">
-        <div class="foot-link"> <span>友情链接:</span> <a> <img src="../public/img/7.jpg"> </a> <a> <img src="../public/img/8.jpg">
-          </a> <a> <img src="../public/img/9.jpg"> </a> <a> <img src="../public/img/10.jpg"> </a> </div>
-        <div class="foot-contact-us">
-          <p> <span> <a>联系我们</a> </span> <span> | </span> <span> <a>网站地图</a> </span> </p>
-          <p> <span> 版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号 </span> </p>
-          <p> <span> 地址：南宁市兴宁区民主路49号 邮政编码 530012 </span> </p>
-          <p> <span> 建议使用IE9以上版本、360、Chrome浏览器打开 </span> </p>
+            <!-- 兼容ie5的写法 -->
+            <div class="home-nav">
+                <ul class="nav">
+                    <li><a href="../index.html">网站首页</a></li>
+                    <li><a href="../component/newsPage.html">新闻动态</a></li>
+                    <li><a href="../component/zwgkPage.html">政务公开</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
+                    <li><a href="../component/hdjl.html">互动交流</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="foot-icon"> <img src="../public/img/red.png"> <img src="../public/img/jiucuo.png"> </div>
-      </div>
+
+        <!-- 页面内容 -->
+        <div class="article-path"> <a href="../index.html">
+                <span>
+                    首页
+                </span>
+            </a>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                聚焦广西
+            </span>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                一带一路
+            </span></div>
+        <div class="article-box">
+            <h1 class="article-title">“珠还合浦”正逢时——庆祝自治区60华诞特别报道之“一带一路”篇</h1>
+            <div class="article-info"> <span>时间：2018年11月30日 07:39</span>&emsp;&emsp; <span>来源：广西日报</span>
+                <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a
+                        href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin"
+                        data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+                <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+                <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
+                <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
+                        href="javascript:doZoom(10)">小</a>】</span>
+            </div>
+            <div id="article-font-size" class="article-content" align="center">
+                <p>&emsp;&emsp;</p>
+                <img src="http://d.gxzf.gov.cn/image/uploadpic/2018/11/30/afae3e2c56dac7c31af5cf8a63bca91c.jpg" /></p>
+                <p style="text-indent: 2em;"><span style="color: rgb(0, 0, 255);">10月20日，埃塞俄比亚一家糖厂竣工投产之后顺利产出优质原糖，项目现场一阵欢呼。该项目由广西建工一安公司承建，随着“一带一路”建设深入推进，广西企业加快了“走出去”步伐。
+                        龚有东 卓能哺 摄</span></p>
+                <p style="text-indent: 2em;">11月20日，钦州港东站，一列海铁联运集装箱班列正装载，目的地是重庆、昆明等地。“以前货物少，半天才装一车，现在一天能装满3列车。”广西沿海铁路公司钦州港站站长黄光辉说，2015年钦州港东站设立时，每天只有1人值守，现在每天至少要安排10人值班。</p>
+                <p style="text-indent: 2em;">钦州港东站的繁忙景象，只是国际陆海贸易新通道上的一个缩影。近年来，广西全力参与“一带一路”建设，积极构建“南向、北联、东融、西合”全面开放新格局。东邻粤港澳、南濒北部湾、面向东南亚、背靠大西南，八桂大地已由昔日南疆一隅，蝶变为中国面向东盟开放合作的主要平台、“一带一路”有机衔接的重要门户。</p>
+                <p style="text-indent: 2em;">2000多年前，北部湾畔的合浦帆樯林立，中国的海船以这里为始发港，启程远航印度洋沿岸各国。2000多年后的今天，怀着向海而兴梦想的八桂儿女，承载“三大定位”新使命，融入“一带一路”大格局，“珠还合浦”正逢时！</p>
+                <p style="text-indent: 2em;"><strong>互联互通大跨越</strong></p>
+                <p style="text-indent: 2em;">11月12日，中国与新加坡签署谅解备忘录，“南向通道”正式更名为“国际陆海贸易新通道”。</p>
+                <p style="text-indent: 2em;">这次更名，意味着在中新互联互通项目框架下，国际陆海贸易新通道的内涵更深，外延更广，建设内容从物流、基础设施等“硬联通”，扩展到数据、金融等领域的“软联通”，其建设目的除了重点打造中国西部与东盟的利益共同体之外，还将带动“一带一路”沿线国家和地区合作。</p>
+                <p style="text-indent: 2em;">自去年9月首列海铁联运班列开通以来，国际陆海贸易新通道发展迅速。目前，已开通北部湾港至西部6省市的8条铁海联运班列。截至10月26日，累计开行铁海联运班列840列、发运集装箱41589标箱。</p>
+                <p style="text-indent: 2em;">国际陆海贸易新通道建设，为广西加快发展、实现弯道超车提供了难得的机遇。“作为海上互联互通的重要节点，广西北部湾港航线实现了对东盟国家主要港口全覆盖，并与100多个国家和地区的200多个港口通航，构建起四通八达的‘海上高速路’，成为中国西部地区面向东盟国家的重要物流集散基地。”广西北部湾国际港务集团董事长周小溪表示，目前广西北部湾港年货物吞吐能力超过2亿吨，形成了内陆腹地走向东南亚、印度洋、太平洋、地中海等地的海上大通道。</p>
+                <p style="text-indent: 2em;">陆路方面，国际陆海贸易新通道的跨境公路运输、铁海联运和国际铁路联运也相继开通并实现常态化运行。今年3月，作为中欧班列向南的延伸，越南国际班列正式开通，途经南宁，再由凭祥口岸出境，直达越南河内。</p>
+                <p style="text-indent: 2em;">凭祥是国际陆海贸易新通道的陆路重要节点，广西已开通凭祥-海防港、凭祥-河内-胡志明、凭祥-越南-老挝沙湾拿吉-泰国穆达汉-马来西亚黑木山的“三条黄金物流线路”，是中国连接中南半岛陆路距离最短的物流线路。</p>
+                <p style="text-indent: 2em;">按“十三五”规划，广西将有5条高速公路通达边境口岸，其中越南河内连接友谊关的高速公路预计在2020年全线贯通。广西与东盟正加速形成海陆通道相辅相成、互相支撑的对外大通道格局。</p>
+                <p style="text-indent: 2em;"><strong>桂企走向五大洲</strong></p>
+                <p style="text-indent: 2em;">随着“一带一路”建设如火如荼地开展，广西企业积极开拓“一带一路”市场，就像种子被风吹到世界各地，生根发芽。目前，广西企业“走出去”已覆盖五大洲80多个国家和地区，其中“一带一路”沿线国家项目数占比达83.6%。2017年，广西与“一带一路”沿线国家贸易额2100.2亿元，</p>
+                <p style="text-indent: 2em;">10月23日，中国-乌干达国际产能合作工业园一期项目正式投产。作为“一带一路”国际合作框架下的中乌产能合作示范项目，该园区将解决当地3000多人的就业问题。</p>
+                <p style="text-indent: 2em;">这一项目的EPC总承包方是广西柳州十一冶集团，其在建工程项目涉及巴基斯坦、叙利亚、马来西亚、刚果、哈萨克斯坦、越南、阿塞拜疆、缅甸、乌干达等十多个海外国家。</p>
+                <p style="text-indent: 2em;">近4年里，来自柳州的工人们在非洲大地，将一片草莽荒原建设成为灯火通明的现代工业园区。园区物流负责人刘洋说，中国企业在“一带一路”建设中不只注重经济效益，他们会挖井拉电，修路建学校，与周围村民交朋友，给这个原本落后的地区带来显著变化。</p>
+                <p style="text-indent: 2em;">柳州五菱在印尼，实现了产业生态的创新——不但自己“走出去”，还带动一大批配套企业抱团同去。上汽通用五菱印尼产业园区，是我国在印尼投资额最大的制造业项目。去年7月，项目竣工投产，年产12万辆整车。这是完全由中国汽车企业由内向外输出知识产权、品牌与产品、人力资本与团队，业务运营及管理模式的经典案例。</p>
+                <p style="text-indent: 2em;">广西企业走出去的另一大创新是校企合作。上汽通用五菱在印尼办厂，需要大量的熟练工人和高级技术人才。柳州市城市职业学院和上汽通用五菱合作，依托当地的职业院校开设汽车培训中心，开展境外招生和职业教育培训，2015年招收了近200名印尼学生，第一批63名留学生回到印尼基地工作，成为中坚力量。</p>
+                <p style="text-indent: 2em;">“印尼项目让我们接触到了更加丰富多元的海外市场，也把我们的企业文化和产品标准带到了当地。”上汽通用五菱海外事业高级总监张子盛说。</p>
+                <p style="text-indent: 2em;"><strong>“数字丝路”共筑就</strong></p>
+                <p style="text-indent: 2em;">在今年举办的第15届东博会上，来自非洲的乐器、手工艺品等，令市民耳目一新。这是东博会首次有了“非洲元素”。坦桑尼亚担任本届东博会特邀合作伙伴，是海上丝绸之路延长线上的非洲国家首次出任东博会特邀合作伙伴。这标志着东博会服务“一带一路”建设、拓展国际合作领域平台作用和品牌影响力不断扩大，见证了东博会的合作区域首次走出亚太地区。</p>
+                <p style="text-indent: 2em;">中国-东盟博览会秘书处秘书长王雷表示，非洲国家的参会，是东博会在更广泛合作区域服务“一带一路”的新突破。</p>
+                <p style="text-indent: 2em;">除了传统的投资与贸易主题，东博会还不断把握时代脉搏，在信息数据领域努力开创交流平台，推动中国与东盟各国的数字经济合作，共同建设中国-东盟信息港，为企业搭建了共享数字经济信息、发展数字经济技术、培养数字经济人才的交流与合作平台。</p>
+                <p style="text-indent: 2em;">近4年来，在中国与东盟国家共同努力下，双方信息化领域合作不断深化。中国-东盟信息港建设全面铺开，信息港南宁核心基地等一批立足广西、面向东盟的重点工程相继落地，中越、中老、中缅等跨境陆缆和亚太2号等国际海缆为中国与东盟国家搭起了高速信息通道。目前，中国-东盟信息港已建成或投入运营的项目有30个，正在推进建设的项目42个。（胡铁军）</p>
+            </div>
+        </div>
+        <script>
+            function doZoom(size) {
+                document.getElementById('article-font-size').style.fontSize = size + 'pt'
+            }
+            16 </script>
+
+        <!-- 页面尾部 -->
+        <div class="home-foot">
+            <div class="home-foot-content">
+                <div class="foot-link">
+                    <span>友情链接:</span>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
+                    </a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
+                    </a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
+                    </a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
+                    </a>
+                </div>
+                <div class="foot-contact-us">
+                    <p class="first-line">
+                        <span>
+                            <a>联系我们</a>
+                        </span>
+                        <span>
+                            |
+                        </span>
+                        <span>
+                            <a>网站地图</a>
+                        </span>
+                    </p>
+
+                    <p class="second-line">
+                        <span>
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
+                        </span>
+                    </p>
+
+                    <p class="third-line">
+                        <span>
+                            地址：南宁市兴宁区民主路49号 邮政编码 530012
+                        </span>
+                    </p>
+                    <p class="fourth-line">
+                        <span>
+                            建议使用IE9以上版本、360、Chrome浏览器打开
+                        </span>
+                    </p>
+                </div>
+
+                <div class="foot-icon">
+                    <img src="../public/img/red.png">
+                    <img src="../public/img/jiucuo.png">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
 </body>
 
 </html>
