--- a/articleList/article6-3-5.html
+++ b/articleList/article6-3-5.html
@@ -2,122 +2,183 @@
 <html>
 
 <head>
-  <title>构建区域合作平台 加快数字广西建设——中国-东盟信息港论坛综述</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="viewport" content="width=device-width">
-  <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
-  <meta name="SiteDomain" content="">
-  <meta name="SiteIDCode" content="">
-  <meta name="ColumnName" content="东盟两会">
-  <meta name="ColumnDescription" content="">
-  <meta name="ColumnKeywords" content="">
-  <meta name="ColumnType" content="聚焦广西">
-  <meta name="ArticleTitle" content="构建区域合作平台 加快数字广西建设——中国-东盟信息港论坛综述">
-  <meta name="PubDate" content="2018-9-16 08:11">
-  <meta name="ContentSource" content="广西日报">
-  <link rel="stylesheet" href="../css/home/base.css">
-  <link rel="stylesheet" href="../css/home/head.css">
-  <link rel="stylesheet" href="../css/home/foot.css">
-  <link rel="stylesheet" href="../css/article/article.css">
+    <title>构建区域合作平台 加快数字广西建设——中国-东盟信息港论坛综述</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
+    <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
+    <meta name="SiteDomain" content="">
+    <meta name="SiteIDCode" content="">
+    <meta name="ColumnName" content="东盟两会">
+    <meta name="ColumnDescription" content="">
+    <meta name="ColumnKeywords" content="">
+    <meta name="ColumnType" content="聚焦广西">
+    <meta name="ArticleTitle" content="构建区域合作平台 加快数字广西建设——中国-东盟信息港论坛综述">
+    <meta name="PubDate" content="2018-9-16 08:11">
+    <meta name="ContentSource" content="广西日报">
+    <link rel="stylesheet" href="../css/home/base.css">
+    <link rel="stylesheet" href="../css/home/head.css">
+    <link rel="stylesheet" href="../css/home/foot.css">
+    <link rel="stylesheet" href="../css/article/article.css">
 </head>
 
 <body>
-  <script type="text/javascript" src="../js/tool.js"></script>
-  <div class="home-page">
-    <!-- 头部 -->
-    <div class="home-head">
-      <div class="head-link"> <span>
-          <script>document.write(getChineseData())</script>
-        </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a> </span>
-          <span class="middle"> <a>邮件系统</a> </span> <span class="middle"> <a>OA系统</a> </span> <span class="last"> 字体:
-            <span> 简体 </span> </span> </span> <span class="head-search">
-          <input placeholder="请输入搜索内容">
-          <button>搜索</button>
-        </span> </div>
-      <div class="home-head-logo"> </div>
+    <script type="text/javascript" src="../js/tool.js"></script>
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+    <div class="home-page">
+        <!-- 头部 -->
+        <div class="home-head">
+            <div class="head-link"> <span>
+                    <script>document.write(getChineseData())</script>
+                </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a>
+                    </span>
+                </span> <span class="head-search">
+                    <input placeholder="请输入搜索内容">
+                    <button>搜索</button>
+                </span> </div>
+            <div class="home-head-logo"> </div>
 
-      <!-- 兼容ie5的写法 -->
-      <div class="home-nav">
-        <ul class="nav">
-          <li><a href="../index.html">网站首页</a></li>
-          <li><a href="../component/newsPage.html">新闻动态</a></li>
-          <li><a href="../component/zwgkPage.html">政务公开</a></li>
-          <li><a>专题聚焦</a></li>
-          <li><a href="../component/hdjl.html">互动交流</a></li>
-          <li><a class="nav-last-item">网上办事</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- 页面内容 -->
-    <div class="article-path"> <a href="../index.html">
-        <span>
-          首页
-        </span>
-      </a>
-      <span>
-        <!-- 请不要看出代码 -->
-        >
-      </span>
-      <span>
-        新闻动态
-      </span></div>
-    <div class="article-box">
-      <h1 class="article-title">构建区域合作平台 加快数字广西建设——中国-东盟信息港论坛综述</h1>
-      <div class="article-info"> <span>时间：2018年9月16日 08:11</span>&emsp;&emsp; <span>来源：广西日报</span>
-        <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a href="#"
-            class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin"
-            title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
-        <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
-        <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
-        <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
-            href="javascript:doZoom(10)">小</a>】</span>
-      </div>
-      <div id="article-font-size" class="article-content" align="center">
-        <p style="TEXT-INDENT: 2em">9月12日，以“共建数字丝路，共享数字经济”为主题的第三届中国-东盟信息港论坛在南宁拉开帷幕。来自中国、美国、印度和东盟国家的政府官员、企业精英、商界领袖、专家学者等出席主论坛。广西与中国华录集团、京东集团、苏宁集团签订了战略合作框架协议，共同构建区域合作平台，携手加快数字产业化建设，共享数字经济红利。</p>
-        <p style="TEXT-INDENT: 2em"><strong>论坛影响力越来越大</strong></p>
-        <p style="TEXT-INDENT: 2em">中国-东盟信息港论坛国际影响力越来越大，日渐成为中国与东盟国家数字经济领域政商学企顶尖人物参与的盛会，成为集会议、成果展览、项目推介、经贸洽谈等于一体的综合性国际展会，有力促进中国和东盟国家在数字经济领域的交流合作。</p>
-        <p style="TEXT-INDENT: 2em">本届论坛包括1个主论坛、9个分论坛（网络人文发展论坛、5G技术与应用论坛、卫星应用产业合作论坛、电子商务论坛、数字经济论坛、数字丝路产业合作论坛、智慧城市论坛、新一代信息技术产业创新发展论坛、华为全球物流峰会），共吸引2000余名嘉宾参会。</p>
-        <p style="TEXT-INDENT: 2em">在数字基础设施领域，广西将加快中国-东盟信息港小镇和互联网骨干直联点、大数据中心、超算中心等一批重大项目建设，增强与东盟的信息基础设施互联互通能力；加快建设中国电信东盟国际产业园、中国移动新型绿色数据中心、地理信息与卫星应用产业园等，打造高端化、国际化的面向东盟国际数字合作平台。</p>
-        <p style="TEXT-INDENT: 2em">在数字经济发展领域，广西将依托中国-东盟信息港大数据中心，引进一批数据采集、挖掘、分析等大数据服务企业；聚焦集成电路、人工智能、量子通信、区块链、未来网络等领域，积极布局前沿信息产业；加快建设中国-东盟金融大数据服务平台和中国-东盟信息港数字经济研究院，为双边数字经济形势分析、金融合作、科学决策和精准管理提供智力支撑。</p>
-        <p style="TEXT-INDENT: 2em">在数字丝路合作领域，广西将紧紧围绕打造面向东盟的数字新高地和数字丝路的重要门户，推动建立中国-东盟信息港数字经济合作框架体系，完善提升中国-东盟技术转移中心线上平台，建设一批跨境合作科技园区、众创空间和孵化器，打造中国-东盟数据生态基地、小语种人工智能研发基地，深化和拓展国际合作。</p>
-        <p style="TEXT-INDENT: 2em">本届信息港论坛着眼5G技术与应用、卫星导航应用产业合作、数字丝路产业合作、智慧城市、智能终端制造等领域，推动更深层次的高端对话合作，将进一步激发中国-东盟携手发展数字经济、共建“数字丝绸之路”的巨大潜能。</p>
-        <p style="TEXT-INDENT: 2em"><strong>受益于数字经济发展</strong></p>
-        <p style="TEXT-INDENT: 2em">近年来，“一带一路”倡议从理念转化为行动，从愿景转变为现实，为实现世界共同繁荣注入重要推动力量。</p>
-        <p style="TEXT-INDENT: 2em">在各方共同努力下，中国-东盟信息港建设起步顺利，以网络互联、信息互通、合作互利为基本内容，逐步形成以广西为支点的中国和东盟的信息枢纽，稳步推进互联网经贸服务、人文交流和技术合作，促进区域数字经济创新发展。</p>
-        <p style="TEXT-INDENT: 2em">广西积极推进与东盟国家在数字经济领域的合作交流，也直接受益于数字经济发展。截至2017年底，中国联通已在南宁建成面向东盟国家的区域性国际通信出入口，亚欧5号、亚太直达、亚非欧1号3条国际通信海缆已经全部建成投入使用，中国-东盟信息港信息通信枢纽已初具雏形，中国东兴-越南芒街跨境经济合作区、中国-东盟网络视听产业基地等建设取得重大突破，中国-东盟跨境结算子平台已经建成并在边民互市贸易中投入使用，广西在发挥中国与东盟数字经济双向交流合作中，发挥着越来越重要的作用。</p>
-        <p style="TEXT-INDENT: 2em">截至2017年底，广西数字经济总规模达5200亿元，信息制造业总产值达2400亿元，电子商务交易额达7000亿元，行政村光纤通达率99.4%，建成了面向东盟国家的区域性国际通信出入口，中国-东盟网络视听产业基地、跨境结算子平台等建设不断取得突破。</p>
-        <p style="TEXT-INDENT: 2em"><strong>加快建设数字广西</strong></p>
-        <p style="TEXT-INDENT: 2em">“百舸争流，奋楫者先”。为加快培育形成数字经济新动能，广西深入实施大数据战略，建设数字广西，努力打造面向东盟开放合作的数字新高地。</p>
-        <p style="TEXT-INDENT: 2em">在本届论坛期间，广西与中国华录集团、京东集团、苏宁集团签订了战略合作框架协议；广西发改委、商务厅，南宁市政府，北海高新技术产业开发区，桂林电子科技大学、广西科技大学，中国邮政广西分公司、数字广西集团有限公司、中国-东盟信息港股份有限公司、广西广播电视信息网络有限公司等单位和企业，与中国国家信息中心、浪潮集团、阿里云计算有限公司、华为技术有限公司、新加坡劲升逻辑公司、柬埔寨皇家集团等国内外有关单位和企业签订数字经济招商引资合作项目35个，其中与东盟国家合作项目7个。</p>
-        <p style="TEXT-INDENT: 2em">今年8月，广西召开全区数字广西建设大会，出台一系列文件。今年5月，自治区党委、政府批准成立了数字广西集团，并赋予了集团“一主体、三平台”的战略定位，即广西政务大数据运营开发应用主体、广西数字经济产业的投资平台、合作平台和孵化平台。</p>
-        <p style="TEXT-INDENT: 2em">上个月，数字广西集团完成了对云宝宝大数据公司的增资入股，成为云宝宝公司的第一大股东，开始参与到南宁市智慧城市的建设中，迈出了智慧城市产业布局的第一步。</p>
-        <p style="TEXT-INDENT: 2em">数字广西集团负责人表示，数字广西集团力争到2020年将数字广西集团打造成为：拥有云计算、大数据、人工智能、智慧城市、北斗导航、金融科技等多个业务板块的广西数字经济龙头企业，构建合作共赢的数字经济生态圈。（记者王克础实习生梁冰心）</p>
-      </div>
-    </div>
-    <script>
-      function doZoom(size) {
-        document.getElementById('article-font-size').style.fontSize = size + 'pt'
-      }
-      16 </script>
-
-    <!-- 页面尾部 -->
-    <div class="home-foot">
-      <div class="home-foot-content">
-        <div class="foot-link"> <span>友情链接:</span> <a> <img src="../public/img/7.jpg"> </a> <a> <img src="../public/img/8.jpg">
-          </a> <a> <img src="../public/img/9.jpg"> </a> <a> <img src="../public/img/10.jpg"> </a> </div>
-        <div class="foot-contact-us">
-          <p> <span> <a>联系我们</a> </span> <span> | </span> <span> <a>网站地图</a> </span> </p>
-          <p> <span> 版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号 </span> </p>
-          <p> <span> 地址：南宁市兴宁区民主路49号 邮政编码 530012 </span> </p>
-          <p> <span> 建议使用IE9以上版本、360、Chrome浏览器打开 </span> </p>
+            <!-- 兼容ie5的写法 -->
+            <div class="home-nav">
+                <ul class="nav">
+                    <li><a href="../index.html">网站首页</a></li>
+                    <li><a href="../component/newsPage.html">新闻动态</a></li>
+                    <li><a href="../component/zwgkPage.html">政务公开</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
+                    <li><a href="../component/hdjl.html">互动交流</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="foot-icon"> <img src="../public/img/red.png"> <img src="../public/img/jiucuo.png"> </div>
-      </div>
+
+        <!-- 页面内容 -->
+        <div class="article-path"> <a href="../index.html">
+                <span>
+                    首页
+                </span>
+            </a>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                聚焦广西
+            </span>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                东盟两会
+            </span></div>
+        <div class="article-box">
+            <h1 class="article-title">构建区域合作平台 加快数字广西建设——中国-东盟信息港论坛综述</h1>
+            <div class="article-info"> <span>时间：2018年9月16日 08:11</span>&emsp;&emsp; <span>来源：广西日报</span>
+                <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a
+                        href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin"
+                        data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+                <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+                <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
+                <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
+                        href="javascript:doZoom(10)">小</a>】</span>
+            </div>
+            <div id="article-font-size" class="article-content" align="center">
+                <p style="TEXT-INDENT: 2em">9月12日，以“共建数字丝路，共享数字经济”为主题的第三届中国-东盟信息港论坛在南宁拉开帷幕。来自中国、美国、印度和东盟国家的政府官员、企业精英、商界领袖、专家学者等出席主论坛。广西与中国华录集团、京东集团、苏宁集团签订了战略合作框架协议，共同构建区域合作平台，携手加快数字产业化建设，共享数字经济红利。</p>
+                <p style="TEXT-INDENT: 2em"><strong>论坛影响力越来越大</strong></p>
+                <p style="TEXT-INDENT: 2em">中国-东盟信息港论坛国际影响力越来越大，日渐成为中国与东盟国家数字经济领域政商学企顶尖人物参与的盛会，成为集会议、成果展览、项目推介、经贸洽谈等于一体的综合性国际展会，有力促进中国和东盟国家在数字经济领域的交流合作。</p>
+                <p style="TEXT-INDENT: 2em">本届论坛包括1个主论坛、9个分论坛（网络人文发展论坛、5G技术与应用论坛、卫星应用产业合作论坛、电子商务论坛、数字经济论坛、数字丝路产业合作论坛、智慧城市论坛、新一代信息技术产业创新发展论坛、华为全球物流峰会），共吸引2000余名嘉宾参会。</p>
+                <p style="TEXT-INDENT: 2em">在数字基础设施领域，广西将加快中国-东盟信息港小镇和互联网骨干直联点、大数据中心、超算中心等一批重大项目建设，增强与东盟的信息基础设施互联互通能力；加快建设中国电信东盟国际产业园、中国移动新型绿色数据中心、地理信息与卫星应用产业园等，打造高端化、国际化的面向东盟国际数字合作平台。</p>
+                <p style="TEXT-INDENT: 2em">在数字经济发展领域，广西将依托中国-东盟信息港大数据中心，引进一批数据采集、挖掘、分析等大数据服务企业；聚焦集成电路、人工智能、量子通信、区块链、未来网络等领域，积极布局前沿信息产业；加快建设中国-东盟金融大数据服务平台和中国-东盟信息港数字经济研究院，为双边数字经济形势分析、金融合作、科学决策和精准管理提供智力支撑。</p>
+                <p style="TEXT-INDENT: 2em">在数字丝路合作领域，广西将紧紧围绕打造面向东盟的数字新高地和数字丝路的重要门户，推动建立中国-东盟信息港数字经济合作框架体系，完善提升中国-东盟技术转移中心线上平台，建设一批跨境合作科技园区、众创空间和孵化器，打造中国-东盟数据生态基地、小语种人工智能研发基地，深化和拓展国际合作。</p>
+                <p style="TEXT-INDENT: 2em">本届信息港论坛着眼5G技术与应用、卫星导航应用产业合作、数字丝路产业合作、智慧城市、智能终端制造等领域，推动更深层次的高端对话合作，将进一步激发中国-东盟携手发展数字经济、共建“数字丝绸之路”的巨大潜能。</p>
+                <p style="TEXT-INDENT: 2em"><strong>受益于数字经济发展</strong></p>
+                <p style="TEXT-INDENT: 2em">近年来，“一带一路”倡议从理念转化为行动，从愿景转变为现实，为实现世界共同繁荣注入重要推动力量。</p>
+                <p style="TEXT-INDENT: 2em">在各方共同努力下，中国-东盟信息港建设起步顺利，以网络互联、信息互通、合作互利为基本内容，逐步形成以广西为支点的中国和东盟的信息枢纽，稳步推进互联网经贸服务、人文交流和技术合作，促进区域数字经济创新发展。</p>
+                <p style="TEXT-INDENT: 2em">广西积极推进与东盟国家在数字经济领域的合作交流，也直接受益于数字经济发展。截至2017年底，中国联通已在南宁建成面向东盟国家的区域性国际通信出入口，亚欧5号、亚太直达、亚非欧1号3条国际通信海缆已经全部建成投入使用，中国-东盟信息港信息通信枢纽已初具雏形，中国东兴-越南芒街跨境经济合作区、中国-东盟网络视听产业基地等建设取得重大突破，中国-东盟跨境结算子平台已经建成并在边民互市贸易中投入使用，广西在发挥中国与东盟数字经济双向交流合作中，发挥着越来越重要的作用。</p>
+                <p style="TEXT-INDENT: 2em">截至2017年底，广西数字经济总规模达5200亿元，信息制造业总产值达2400亿元，电子商务交易额达7000亿元，行政村光纤通达率99.4%，建成了面向东盟国家的区域性国际通信出入口，中国-东盟网络视听产业基地、跨境结算子平台等建设不断取得突破。</p>
+                <p style="TEXT-INDENT: 2em"><strong>加快建设数字广西</strong></p>
+                <p style="TEXT-INDENT: 2em">“百舸争流，奋楫者先”。为加快培育形成数字经济新动能，广西深入实施大数据战略，建设数字广西，努力打造面向东盟开放合作的数字新高地。</p>
+                <p style="TEXT-INDENT: 2em">在本届论坛期间，广西与中国华录集团、京东集团、苏宁集团签订了战略合作框架协议；广西发改委、商务厅，南宁市政府，北海高新技术产业开发区，桂林电子科技大学、广西科技大学，中国邮政广西分公司、数字广西集团有限公司、中国-东盟信息港股份有限公司、广西广播电视信息网络有限公司等单位和企业，与中国国家信息中心、浪潮集团、阿里云计算有限公司、华为技术有限公司、新加坡劲升逻辑公司、柬埔寨皇家集团等国内外有关单位和企业签订数字经济招商引资合作项目35个，其中与东盟国家合作项目7个。</p>
+                <p style="TEXT-INDENT: 2em">今年8月，广西召开全区数字广西建设大会，出台一系列文件。今年5月，自治区党委、政府批准成立了数字广西集团，并赋予了集团“一主体、三平台”的战略定位，即广西政务大数据运营开发应用主体、广西数字经济产业的投资平台、合作平台和孵化平台。</p>
+                <p style="TEXT-INDENT: 2em">上个月，数字广西集团完成了对云宝宝大数据公司的增资入股，成为云宝宝公司的第一大股东，开始参与到南宁市智慧城市的建设中，迈出了智慧城市产业布局的第一步。</p>
+                <p style="TEXT-INDENT: 2em">数字广西集团负责人表示，数字广西集团力争到2020年将数字广西集团打造成为：拥有云计算、大数据、人工智能、智慧城市、北斗导航、金融科技等多个业务板块的广西数字经济龙头企业，构建合作共赢的数字经济生态圈。（记者王克础实习生梁冰心）</p>
+            </div>
+        </div>
+        <script>
+            function doZoom(size) {
+                document.getElementById('article-font-size').style.fontSize = size + 'pt'
+            }
+            16 </script>
+
+        <!-- 页面尾部 -->
+        <div class="home-foot">
+            <div class="home-foot-content">
+                <div class="foot-link">
+                    <span>友情链接:</span>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
+                    </a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
+                    </a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
+                    </a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
+                    </a>
+                </div>
+                <div class="foot-contact-us">
+                    <p class="first-line">
+                        <span>
+                            <a>联系我们</a>
+                        </span>
+                        <span>
+                            |
+                        </span>
+                        <span>
+                            <a>网站地图</a>
+                        </span>
+                    </p>
+
+                    <p class="second-line">
+                        <span>
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
+                        </span>
+                    </p>
+
+                    <p class="third-line">
+                        <span>
+                            地址：南宁市兴宁区民主路49号 邮政编码 530012
+                        </span>
+                    </p>
+                    <p class="fourth-line">
+                        <span>
+                            建议使用IE9以上版本、360、Chrome浏览器打开
+                        </span>
+                    </p>
+                </div>
+
+                <div class="foot-icon">
+                    <img src="../public/img/red.png">
+                    <img src="../public/img/jiucuo.png">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
 </body>
 
 </html>
