--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>广西壮族自治区退役军人事务所</title>
+    <title>广西壮族自治区退役军人事务厅</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
@@ -37,20 +37,6 @@
 
                         <a>收藏本站</a>
                     </span>
-                    <span class="middle">
-
-                        <a>邮件系统</a>
-                    </span>
-                    <span class="middle">
-                        <a>OA系统</a>
-                    </span>
-
-                    <span class="last">
-                        字体:
-                        <span>
-                            简体
-                        </span>
-                    </span>
                 </span>
 
                 <span class="head-search">
@@ -67,9 +53,9 @@
                     <li><a href="./index.html">网站首页</a></li>
                     <li><a href="./component/newsPage.html">新闻动态</a></li>
                     <li><a href="./component/zwgkPage.html">政务公开</a></li>
-                    <li><a>专题聚焦</a></li>
+                    <li><a href="./component/ztjjPage.html">风采展示</a></li>
                     <li><a href="./component/hdjl.html">互动交流</a></li>
-                    <li><a class="nav-last-item">网上办事</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
                 </ul>
             </div>
         </div>
@@ -86,8 +72,8 @@
                         <a style="text-decoration:none;color:#333" href="./articleList/article1-3-2.html">信件全文</a>
                     </span>
                     <span class="sub-news">
-                        <a>
-                            我区退役军人和优抚对象信息采集10天新增采集26万多人
+                        <a style="text-decoration:none;color:#333" href="./articleList/article1-3-1.html">
+                            广西壮族自治区退役军人事务厅正式挂牌
                         </a>
                     </span>
                 </p>
@@ -99,25 +85,31 @@
             <!--------------------------------------- 第一部分内容 ------------------------------------------------------->
             <div class="first-section">
 
+
                 <!-- 动态数据需自行修改 -->
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <!--First Slide-->
                         <div class="swiper-slide first">
-                            <a href="./articleList/article1-1-1.html">
+                            <a href="./articleList/article1-1-2.html">
                                 <img src="./img/1.jpg">
                             </a>
                         </div>
                         <!--Second Slide-->
                         <div class="swiper-slide second">
-                            <a href="./articleList/article1-1-2.html">
-                                <img src="./img/1.jpg">
+                            <a href="./articleList/article1-1-1.html">
+                                <img src="./img/2.jpg">
+                            </a>
+                        </div>
+                        <div class="swiper-slide third">
+                            <a>
+                                <img src="./img/3.jpg">
                             </a>
                         </div>
                     </div>
 
                     <div class="swiper-slide-desc">
-                        广西壮族自治区退役军人事务厅正式挂牌
+                        广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话
                     </div>
 
                     <div class="pagination"></div>
@@ -127,7 +119,7 @@
                     <div id="first-section-tab" class="cust-tab">
                         <ul class="tabBar">
                             <li>
-                                事实新闻
+                                时事新闻
                                 <span class="split"></span>
                                 <div class="bottom-tar"></div>
                             </li>
@@ -187,8 +179,10 @@
 
             <!--------------------------------------- 第二部分内容 ---------------------------------------------------------->
             <div class="second-section">
-                <div class="second-section-logo">
-                </div>
+                <a href="http://sy.mca.gov.cn/article/sywh/">
+                    <div class="second-section-logo">
+                    </div>
+                </a>
                 <div class="second-section-content">
                     <div class="second-section-content-left">
                         <div id="second-section-tab" class="cust-tab-withtitle">
@@ -212,7 +206,7 @@
                                 </ul>
 
                                 <div class="more">
-                                    <a>
+                                    <a href="./component/zwgkPage.html">
                                         <span class="left">
                                             更多
                                         </span>
@@ -263,7 +257,7 @@
                             <div class="boder-placeholders">
                             </div>
                             <div class="more">
-                                <a>
+                                <a href="./component/hdjl.html">
                                     <span class="left">
                                         更多
                                     </span>
@@ -275,7 +269,7 @@
                         </div>
                         <div class="second-section-content-right-content">
                             <div class="top">
-                                <a>
+                                <a href="./component/hdjl.html">
                                     <div>
                                         <img src="./public/img/hdjl-1.png">
                                         <p>
@@ -283,7 +277,7 @@
                                         </p>
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/hdjl.html">
                                     <div>
                                         <img src="./public/img/hdjl-2.png">
                                         <p>
@@ -291,7 +285,7 @@
                                         </p>
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/hdjl.html">
                                     <div class="last-item">
                                         <img src="./public/img/hdjl-3.png">
                                         <p>
@@ -302,7 +296,7 @@
 
                             </div>
                             <div class="bottom">
-                                <a>
+                                <a href="./component/hdjl.html">
                                     <div>
                                         <img src="./public/img/hdjl-4.png">
                                         <p>
@@ -310,7 +304,7 @@
                                         </p>
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/hdjl.html">
                                     <div>
                                         <img src="./public/img/hdjl-5.png">
                                         <p>
@@ -318,7 +312,7 @@
                                         </p>
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/hdjl.html">
                                     <div class="last-item">
                                         <img src="./public/img/hdjl-6.png">
                                         <p>
@@ -350,7 +344,9 @@
                                     <li>
                                         双拥文化
                                     </li>
-                                    <a href="http://www.chinamartyrs.gov.cn/LieShiYingMingLu/list.html?id=CN450000&tdsourcetag=s_pcqq_aiomsg">
+                                    <!-- <a href="http://www.chinamartyrs.gov.cn/LieShiYingMingLu/list.html?id=CN450000&tdsourcetag=s_pcqq_aiomsg"> -->
+                                    <a target="_blank" href="http://www.chinamartyrs.gov.cn/LieShiYingMingLu/list.html?id=CN450000&tdsourcetag=s_pcqq_aiomsg"
+                                        onclick="javascript:return gotoNewUrl()">
                                         <li>
                                             英烈英名录
                                         </li>
@@ -358,7 +354,7 @@
                                 </ul>
 
                                 <div class="more">
-                                    <a>
+                                    <a href="./component/ztjjPage.html">
                                         <span class="left">
                                             更多
                                         </span>
@@ -413,25 +409,25 @@
                         </div>
                         <div class="third-section-content-right-content">
                             <div class="left">
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div>
                                         <img src="./public/img/zwfw-1.png">
                                         权益维护
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div>
                                         <img src="./public/img/zwfw-3.png">
                                         就业服务
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div>
                                         <img src="./public/img/zwfw-5.png">
                                         军休安置
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div class="last-item">
                                         <img src="./public/img/zwfw-7.png">
                                         英烈褒扬
@@ -439,25 +435,25 @@
                                 </a>
                             </div>
                             <div class="right">
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div>
                                         <img src="./public/img/zwfw-2.png">
-                                        退役安装
+                                        退役安置
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div>
                                         <img src="./public/img/zwfw-4.png">
                                         教育培训
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div>
                                         <img src="./public/img/zwfw-6.png">
                                         优待抚恤
                                     </div>
                                 </a>
-                                <a>
+                                <a href="./component/zwfwPage.html">
                                     <div class="last-item">
                                         <img src="./public/img/zwfw-8.png">
                                         双拥工作
@@ -473,8 +469,10 @@
 
             <!--------------------------------------- 第四部分内容 ---------------------------------------------------------->
             <div class="fourth-section">
-                <div class="fourth-section-logo">
-                </div>
+                <a href="http://www.mva.gov.cn/sy/zt/ggkfssznzl/index.html">
+                    <div class="fourth-section-logo">
+                    </div>
+                </a>
                 <div class="fourth-section-content">
                     <div class="fourth-section-content-left">
                         <div id="fourth-section-tab" class="cust-tab-withtitle">
@@ -541,15 +539,16 @@
                         </div>
                         <div class="fourth-section-content-right-content">
                             <div class="left">
-                                <a>
+                                <a target="_blank" href="http://bm.jzchina.org.cn/AzBm/index.aspx" onclick="javascript:return gotoNewUrl()">
                                     <div class="kjrk first">
                                     </div>
                                 </a>
-                                <a>
+                                <a target="_blank" href="http://dbpx.jzchina.org.cn/Passport/Default.aspx?ru=http%3a%2f%2fwebpx.jzchina.org.cn%2flearning%2fdefault.aspx&to=-2&aid=LearnSite&ip=192.168.80.70&lou=http%3a%2f%2fwebpx.jzchina.org.cn%2fLearning%2fLearnSite%2fMCSAuthenticateLogOff.axd&sf=4ee576f204902511"
+                                    onclick="javascript:return gotoNewUrl()">
                                     <div class="kjrk second">
                                     </div>
                                 </a>
-                                <a>
+                                <a target="_blank" href="http://zzzy.mohrss.gov.cn/" onclick="javascript:return gotoNewUrl()">
                                     <div class="kjrk third">
                                     </div>
                                 </a>
@@ -574,17 +573,20 @@
             <div class="home-foot-content">
                 <div class="foot-link">
                     <span>友情链接:</span>
-                    <a>
-                        <img src="./public/img/7.jpg">
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
                     </a>
-                    <a>
-                        <img src="./public/img/8.jpg">
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
                     </a>
-                    <a>
-                        <img src="./public/img/9.jpg">
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
                     </a>
-                    <a>
-                        <img src="./public/img/10.jpg">
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
                     </a>
                 </div>
                 <div class="foot-contact-us">
@@ -602,7 +604,7 @@
 
                     <p class="second-line">
                         <span>
-                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
                         </span>
                     </p>
 
@@ -632,6 +634,15 @@
     <script type="text/javascript" src="./public/js/cust_tab.js"></script>
     <script>
         initData();
+
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
 
         function tabOnChange(item) {
 
@@ -825,6 +836,7 @@
         var mySwiper = new Swiper('.swiper-container', {
             pagination: '.pagination',
             mode: 'horizontal',
+            color: '#d51e16',
             loop: true,
             paginationClickable: true,
             autoplay: 5000
@@ -835,13 +847,16 @@
             title = ""
             switch (swiper.activeIndex) {
                 case 1:
-                    title = "广西壮族自治区退役军人事务厅正式挂牌"
-                    break;
-                case 2:
                     title = "广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话"
                     break;
-                default:
+                case 2:
                     title = "广西壮族自治区退役军人事务厅正式挂牌"
+                    break;
+                case 3:
+                    title = "广西退役军人事务厅首次职工大会"
+                    break;
+                default:
+                    title = "广西召开退役军人服务管理工作会议，自治区党委书记鹿心社出席并讲话"
             }
 
             document.getElementsByClassName("swiper-slide-desc")[0].innerHTML = title
