--- a/articleList/article6-1-5.html
+++ b/articleList/article6-1-5.html
@@ -2,107 +2,168 @@
 <html>
 
 <head>
-  <title>文章详情页</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="viewport" content="width=device-width">
-  <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
-  <meta name="SiteDomain" content="">
-  <meta name="SiteIDCode" content="">
-  <meta name="ColumnName" content="壮美广西">
-  <meta name="ColumnDescription" content="">
-  <meta name="ColumnKeywords" content="">
-  <meta name="ColumnType" content="聚焦广西">
-  <meta name="ArticleTitle" content="广西壮族自治区退役军人事务厅正式挂牌">
-  <meta name="PubDate" content="2018-12-24 08:00">
-  <meta name="ContentSource" content="广西壮族自治区人民政府网">
-  <link rel="stylesheet" href="../css/home/base.css">
-  <link rel="stylesheet" href="../css/home/head.css">
-  <link rel="stylesheet" href="../css/home/foot.css">
-  <link rel="stylesheet" href="../css/article/article.css">
+    <title>文章详情页</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
+    <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
+    <meta name="SiteDomain" content="">
+    <meta name="SiteIDCode" content="">
+    <meta name="ColumnName" content="壮美广西">
+    <meta name="ColumnDescription" content="">
+    <meta name="ColumnKeywords" content="">
+    <meta name="ColumnType" content="聚焦广西">
+    <meta name="ArticleTitle" content="广西壮族自治区退役军人事务厅正式挂牌">
+    <meta name="PubDate" content="2018-12-24 08:00">
+    <meta name="ContentSource" content="广西壮族自治区人民政府网">
+    <link rel="stylesheet" href="../css/home/base.css">
+    <link rel="stylesheet" href="../css/home/head.css">
+    <link rel="stylesheet" href="../css/home/foot.css">
+    <link rel="stylesheet" href="../css/article/article.css">
 </head>
 
 <body>
-  <script type="text/javascript" src="../js/tool.js"></script>
-  <div class="home-page">
-    <!-- 头部 -->
-    <div class="home-head">
-      <div class="head-link"> <span>
-          <script>document.write(getChineseData())</script>
-        </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a> </span>
-          <span class="middle"> <a>邮件系统</a> </span> <span class="middle"> <a>OA系统</a> </span> <span class="last"> 字体:
-            <span> 简体 </span> </span> </span> <span class="head-search">
-          <input placeholder="请输入搜索内容">
-          <button>搜索</button>
-        </span> </div>
-      <div class="home-head-logo"> </div>
+    <script type="text/javascript" src="../js/tool.js"></script>
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+    <div class="home-page">
+        <!-- 头部 -->
+        <div class="home-head">
+            <div class="head-link"> <span>
+                    <script>document.write(getChineseData())</script>
+                </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a>
+                    </span>
+                </span> <span class="head-search">
+                    <input placeholder="请输入搜索内容">
+                    <button>搜索</button>
+                </span> </div>
+            <div class="home-head-logo"> </div>
 
-      <!-- 兼容ie5的写法 -->
-      <div class="home-nav">
-        <ul class="nav">
-          <li><a href="../index.html">网站首页</a></li>
-          <li><a href="../component/newsPage.html">新闻动态</a></li>
-          <li><a href="../component/zwgkPage.html">政务公开</a></li>
-          <li><a>专题聚焦</a></li>
-          <li><a href="../component/hdjl.html">互动交流</a></li>
-          <li><a class="nav-last-item">网上办事</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- 页面内容 -->
-    <div class="article-path"> <a href="../index.html">
-        <span>
-          首页
-        </span>
-      </a>
-      <span>
-        <!-- 请不要看出代码 -->
-        >
-      </span>
-      <span>
-        新闻动态
-      </span></div>
-    <div class="article-box">
-      <h1 class="article-title">梧州中山纪念堂</h1>
-      <div class="article-info"> <span>时间：2018年12月24日 08:00</span>&emsp;&emsp; <span>来源：广西壮族自治区人民政府网</span>
-        <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a href="#"
-            class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin"
-            title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
-        <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
-        <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
-        <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
-            href="javascript:doZoom(10)">小</a>】</span>
-      </div>
-      <div id="article-font-size" class="article-content" align="center">
-        <p>&emsp;&emsp;</p>
-        <img src="http://gxzf_d.gxxw.cn/image/uploadpic/2016/12/27/0756347f3f0061d0d4fef6bedba6cebb.jpeg" /></p>
-        <p>　　位于广西梧州市中山公园山顶，坐北向南，占地面积1630平方米，建筑面积1330.59平方米，主体建筑的平面成“中”字形，采用中国古典宫殿式与国外西洋教堂式相结合的建筑结构设计，正门前是宽阔的广场。</p>
-        <p>　　1921年10月至1922年4月，孙中山先生为筹备北伐，曾三次到梧州。1925年3月，孙中山先生逝世后，梧州人民举行了隆重的悼念仪式，随后，在李济深先生的倡议下，开始集资筹建中山纪念堂，以纪念孙中山先生为国家为民族建树的丰功伟绩。1926年元月，举行了中山纪念堂奠基仪式，1928年夏，正式破土动工，1930年10月建成，是全国最早建成的孙中山纪念堂。2006年被国务院公布为全国重点文物保护单位。</p>
-      </div>
-    </div>
-    <script>
-      function doZoom(size) {
-        document.getElementById('article-font-size').style.fontSize = size + 'pt'
-      }
-      16 </script>
-
-    <!-- 页面尾部 -->
-    <div class="home-foot">
-      <div class="home-foot-content">
-        <div class="foot-link"> <span>友情链接:</span> <a> <img src="../public/img/7.jpg"> </a> <a> <img src="../public/img/8.jpg">
-          </a> <a> <img src="../public/img/9.jpg"> </a> <a> <img src="../public/img/10.jpg"> </a> </div>
-        <div class="foot-contact-us">
-          <p> <span> <a>联系我们</a> </span> <span> | </span> <span> <a>网站地图</a> </span> </p>
-          <p> <span> 版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号 </span> </p>
-          <p> <span> 地址：南宁市兴宁区民主路49号 邮政编码 530012 </span> </p>
-          <p> <span> 建议使用IE9以上版本、360、Chrome浏览器打开 </span> </p>
+            <!-- 兼容ie5的写法 -->
+            <div class="home-nav">
+                <ul class="nav">
+                    <li><a href="../index.html">网站首页</a></li>
+                    <li><a href="../component/newsPage.html">新闻动态</a></li>
+                    <li><a href="../component/zwgkPage.html">政务公开</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
+                    <li><a href="../component/hdjl.html">互动交流</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="foot-icon"> <img src="../public/img/red.png"> <img src="../public/img/jiucuo.png"> </div>
-      </div>
+
+        <!-- 页面内容 -->
+        <div class="article-path"> <a href="../index.html">
+                <span>
+                    首页
+                </span>
+            </a>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                聚焦广西
+            </span>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                壮美广西
+            </span></div>
+        <div class="article-box">
+            <h1 class="article-title">梧州中山纪念堂</h1>
+            <div class="article-info"> <span>时间：2018年12月24日 08:00</span>&emsp;&emsp; <span>来源：广西壮族自治区人民政府网</span>
+                <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a
+                        href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin"
+                        data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+                <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+                <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
+                <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
+                        href="javascript:doZoom(10)">小</a>】</span>
+            </div>
+            <div id="article-font-size" class="article-content" align="center">
+                <p>&emsp;&emsp;</p>
+                <img src="http://gxzf_d.gxxw.cn/image/uploadpic/2016/12/27/0756347f3f0061d0d4fef6bedba6cebb.jpeg" /></p>
+                <p>　　位于广西梧州市中山公园山顶，坐北向南，占地面积1630平方米，建筑面积1330.59平方米，主体建筑的平面成“中”字形，采用中国古典宫殿式与国外西洋教堂式相结合的建筑结构设计，正门前是宽阔的广场。</p>
+                <p>　　1921年10月至1922年4月，孙中山先生为筹备北伐，曾三次到梧州。1925年3月，孙中山先生逝世后，梧州人民举行了隆重的悼念仪式，随后，在李济深先生的倡议下，开始集资筹建中山纪念堂，以纪念孙中山先生为国家为民族建树的丰功伟绩。1926年元月，举行了中山纪念堂奠基仪式，1928年夏，正式破土动工，1930年10月建成，是全国最早建成的孙中山纪念堂。2006年被国务院公布为全国重点文物保护单位。</p>
+            </div>
+        </div>
+        <script>
+            function doZoom(size) {
+                document.getElementById('article-font-size').style.fontSize = size + 'pt'
+            }
+            16 </script>
+
+        <!-- 页面尾部 -->
+        <div class="home-foot">
+            <div class="home-foot-content">
+                <div class="foot-link">
+                    <span>友情链接:</span>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
+                    </a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
+                    </a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
+                    </a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
+                    </a>
+                </div>
+                <div class="foot-contact-us">
+                    <p class="first-line">
+                        <span>
+                            <a>联系我们</a>
+                        </span>
+                        <span>
+                            |
+                        </span>
+                        <span>
+                            <a>网站地图</a>
+                        </span>
+                    </p>
+
+                    <p class="second-line">
+                        <span>
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
+                        </span>
+                    </p>
+
+                    <p class="third-line">
+                        <span>
+                            地址：南宁市兴宁区民主路49号 邮政编码 530012
+                        </span>
+                    </p>
+                    <p class="fourth-line">
+                        <span>
+                            建议使用IE9以上版本、360、Chrome浏览器打开
+                        </span>
+                    </p>
+                </div>
+
+                <div class="foot-icon">
+                    <img src="../public/img/red.png">
+                    <img src="../public/img/jiucuo.png">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
 </body>
 
 </html>
