--- a/articleList/article6-2-4.html
+++ b/articleList/article6-2-4.html
@@ -2,107 +2,168 @@
 <html>
 
 <head>
-  <title>国际陆海贸易新通道建设提速 郑州-凭祥-越南河内班列首发</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="viewport" content="width=device-width">
-  <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
-  <meta name="SiteDomain" content="">
-  <meta name="SiteIDCode" content="">
-  <meta name="ColumnName" content="一带一路">
-  <meta name="ColumnDescription" content="">
-  <meta name="ColumnKeywords" content="">
-  <meta name="ColumnType" content="聚焦广西">
-  <meta name="ArticleTitle" content="国际陆海贸易新通道建设提速 郑州-凭祥-越南河内班列首发">
-  <meta name="PubDate" content="2018-12-16 08:17">
-  <meta name="ContentSource" content="广西日报">
-  <link rel="stylesheet" href="../css/home/base.css">
-  <link rel="stylesheet" href="../css/home/head.css">
-  <link rel="stylesheet" href="../css/home/foot.css">
-  <link rel="stylesheet" href="../css/article/article.css">
+    <title>国际陆海贸易新通道建设提速 郑州-凭祥-越南河内班列首发</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width">
+    <meta name="SiteName" content="广西壮族自治区退役军人事务厅">
+    <meta name="SiteDomain" content="">
+    <meta name="SiteIDCode" content="">
+    <meta name="ColumnName" content="一带一路">
+    <meta name="ColumnDescription" content="">
+    <meta name="ColumnKeywords" content="">
+    <meta name="ColumnType" content="聚焦广西">
+    <meta name="ArticleTitle" content="国际陆海贸易新通道建设提速 郑州-凭祥-越南河内班列首发">
+    <meta name="PubDate" content="2018-12-16 08:17">
+    <meta name="ContentSource" content="广西日报">
+    <link rel="stylesheet" href="../css/home/base.css">
+    <link rel="stylesheet" href="../css/home/head.css">
+    <link rel="stylesheet" href="../css/home/foot.css">
+    <link rel="stylesheet" href="../css/article/article.css">
 </head>
 
 <body>
-  <script type="text/javascript" src="../js/tool.js"></script>
-  <div class="home-page">
-    <!-- 头部 -->
-    <div class="home-head">
-      <div class="head-link"> <span>
-          <script>document.write(getChineseData())</script>
-        </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a> </span>
-          <span class="middle"> <a>邮件系统</a> </span> <span class="middle"> <a>OA系统</a> </span> <span class="last"> 字体:
-            <span> 简体 </span> </span> </span> <span class="head-search">
-          <input placeholder="请输入搜索内容">
-          <button>搜索</button>
-        </span> </div>
-      <div class="home-head-logo"> </div>
+    <script type="text/javascript" src="../js/tool.js"></script>
+    <script type="text/javascript">
+        function gotoNewUrl() {
+            var msg = "您访问的链接即将离开\'广西壮族自治区退役军人事务厅\' \n\n请确认是否离开?";
+            if (confirm(msg) == true) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+    <div class="home-page">
+        <!-- 头部 -->
+        <div class="home-head">
+            <div class="head-link"> <span>
+                    <script>document.write(getChineseData())</script>
+                </span> <span class="option"> <span class="first"> <a>设为首页</a> </span> <span class="middle"> <a>收藏本站</a>
+                    </span>
+                </span> <span class="head-search">
+                    <input placeholder="请输入搜索内容">
+                    <button>搜索</button>
+                </span> </div>
+            <div class="home-head-logo"> </div>
 
-      <!-- 兼容ie5的写法 -->
-      <div class="home-nav">
-        <ul class="nav">
-          <li><a href="../index.html">网站首页</a></li>
-          <li><a href="../component/newsPage.html">新闻动态</a></li>
-          <li><a href="../component/zwgkPage.html">政务公开</a></li>
-          <li><a>专题聚焦</a></li>
-          <li><a href="../component/hdjl.html">互动交流</a></li>
-          <li><a class="nav-last-item">网上办事</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- 页面内容 -->
-    <div class="article-path"> <a href="../index.html">
-        <span>
-          首页
-        </span>
-      </a>
-      <span>
-        <!-- 请不要看出代码 -->
-        >
-      </span>
-      <span>
-        新闻动态
-      </span></div>
-    <div class="article-box">
-      <h1 class="article-title">国际陆海贸易新通道建设提速 郑州-凭祥-越南河内班列首发</h1>
-      <div class="article-info"> <span>时间：2018年12月16日 08:17</span>&emsp;&emsp; <span>来源：广西日报</span>
-        <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a href="#"
-            class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin" data-cmd="weixin"
-            title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
-        <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
-        <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
-        <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
-            href="javascript:doZoom(10)">小</a>】</span>
-      </div>
-      <div id="article-font-size" class="article-content" align="center">
-        <p style="TEXT-INDENT: 2em">12月7日，一趟满载中国电子产品、机械设备的列车从河南郑州出发，一路向南经广西凭祥口岸出境后，最终抵达越南河内。这趟郑州-凭祥-越南河内的国际货运班列开通后，全国各地经凭祥铁路口岸通达越南的跨境铁路班列已增至6条。</p>
-        <p style="TEXT-INDENT: 2em">为更好发挥有机衔接“一带一路”重要门户的作用，近几年广西重点打造陆海两大干线。一条是海铁联运干线，以北部湾港为节点，着力建设北部湾区域性国际航运中心、区域性国际商贸物流金融合作中心、港口城市合作网络，畅通与海上丝绸之路沿线国家贸易往来；另一条是跨境公路、铁路干线，以沿边口岸为节点，向北打通经贵阳至重庆、成都、西安、兰州、乌鲁木齐的高速铁路，向南建设联通中南半岛的陆路大通道，为构建中国-中南半岛经济走廊提供交通支撑。</p>
-        <p style="TEXT-INDENT: 2em">广西作为国际陆海贸易新通道的重要交汇点，正积极推动港口、口岸等基础设施建设，努力提升口岸通关便利化水平。在陆路基础设施方面，重点推进中越友谊关-友谊口岸、浦寨-新清、弄怀-谷楠3条国际货运专用通道建设。目前，中越浦寨-新清国际货运专用通道越方段正在抓紧施工，预计2019年1月建成通车。</p>
-        <p style="TEXT-INDENT: 2em">在打造凭祥-海防、凭祥-胡志明、凭祥经沙湾拿吉（老挝）-穆达汉（泰国）-黑木山（马来西亚）3条黄金物流线路的基础上，凭祥市加强与重庆、郑州等地物流园区合作，成功开通东盟国家经凭祥-苏州-满洲里-欧洲、凭祥-郑州-新疆霍尔果斯-欧洲、凭祥-重庆（成都）-新疆阿拉山口-欧洲3条国际物流新线路，推动丝绸之路经济带与中南半岛经济走廊无缝对接。（覃文吉蒋坤宏）</p>
-      </div>
-    </div>
-    <script>
-      function doZoom(size) {
-        document.getElementById('article-font-size').style.fontSize = size + 'pt'
-      }
-      16 </script>
-
-    <!-- 页面尾部 -->
-    <div class="home-foot">
-      <div class="home-foot-content">
-        <div class="foot-link"> <span>友情链接:</span> <a> <img src="../public/img/7.jpg"> </a> <a> <img src="../public/img/8.jpg">
-          </a> <a> <img src="../public/img/9.jpg"> </a> <a> <img src="../public/img/10.jpg"> </a> </div>
-        <div class="foot-contact-us">
-          <p> <span> <a>联系我们</a> </span> <span> | </span> <span> <a>网站地图</a> </span> </p>
-          <p> <span> 版权所有：广西壮族自治区退役军人事务厅 桂ICP备xxxxxxxxxxxxx号 桂公网安备xxxxxxxxxxxxx号 </span> </p>
-          <p> <span> 地址：南宁市兴宁区民主路49号 邮政编码 530012 </span> </p>
-          <p> <span> 建议使用IE9以上版本、360、Chrome浏览器打开 </span> </p>
+            <!-- 兼容ie5的写法 -->
+            <div class="home-nav">
+                <ul class="nav">
+                    <li><a href="../index.html">网站首页</a></li>
+                    <li><a href="../component/newsPage.html">新闻动态</a></li>
+                    <li><a href="../component/zwgkPage.html">政务公开</a></li>
+                    <li><a href="../component/ztjjPage.html">风采展示</a></li>
+                    <li><a href="../component/hdjl.html">互动交流</a></li>
+                    <li><a class="nav-last-item" target="_blank" href="http://wsbs.gxzf.gov.cn/" onclick="javascript:return gotoNewUrl()">网上办事</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="foot-icon"> <img src="../public/img/red.png"> <img src="../public/img/jiucuo.png"> </div>
-      </div>
+
+        <!-- 页面内容 -->
+        <div class="article-path"> <a href="../index.html">
+                <span>
+                    首页
+                </span>
+            </a>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                聚焦广西
+            </span>
+            <span>
+                <!-- 请不要看出代码 -->
+                >
+            </span>
+            <span>
+                一带一路
+            </span></div>
+        <div class="article-box">
+            <h1 class="article-title">国际陆海贸易新通道建设提速 郑州-凭祥-越南河内班列首发</h1>
+            <div class="article-info"> <span>时间：2018年12月16日 08:17</span>&emsp;&emsp; <span>来源：广西日报</span>
+                <div class="bdsharebuttonbox" style="float: right;"><a href="#" class="bds_more" data-cmd="more"></a><a
+                        href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_weixin"
+                        data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a></div>
+                <script>window._bd_share_config = { "common": { "bdSnsKey": {}, "bdText": "", "bdMini": "2", "bdMiniList": false, "bdPic": "", "bdStyle": "1", "bdSize": "16" }, "share": {} }; with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];</script>
+                <a style="float: right; margin-right: 40px"><img src="http://www.mva.gov.cn/images/Printing.gif">打印</a>
+                <span style="float: right; margin-right: 40px">【字体：<a href="javascript:doZoom(14)">大</a>&emsp;<a href="javascript:doZoom(12)">中</a>&emsp;<a
+                        href="javascript:doZoom(10)">小</a>】</span>
+            </div>
+            <div id="article-font-size" class="article-content" align="center">
+                <p style="TEXT-INDENT: 2em">12月7日，一趟满载中国电子产品、机械设备的列车从河南郑州出发，一路向南经广西凭祥口岸出境后，最终抵达越南河内。这趟郑州-凭祥-越南河内的国际货运班列开通后，全国各地经凭祥铁路口岸通达越南的跨境铁路班列已增至6条。</p>
+                <p style="TEXT-INDENT: 2em">为更好发挥有机衔接“一带一路”重要门户的作用，近几年广西重点打造陆海两大干线。一条是海铁联运干线，以北部湾港为节点，着力建设北部湾区域性国际航运中心、区域性国际商贸物流金融合作中心、港口城市合作网络，畅通与海上丝绸之路沿线国家贸易往来；另一条是跨境公路、铁路干线，以沿边口岸为节点，向北打通经贵阳至重庆、成都、西安、兰州、乌鲁木齐的高速铁路，向南建设联通中南半岛的陆路大通道，为构建中国-中南半岛经济走廊提供交通支撑。</p>
+                <p style="TEXT-INDENT: 2em">广西作为国际陆海贸易新通道的重要交汇点，正积极推动港口、口岸等基础设施建设，努力提升口岸通关便利化水平。在陆路基础设施方面，重点推进中越友谊关-友谊口岸、浦寨-新清、弄怀-谷楠3条国际货运专用通道建设。目前，中越浦寨-新清国际货运专用通道越方段正在抓紧施工，预计2019年1月建成通车。</p>
+                <p style="TEXT-INDENT: 2em">在打造凭祥-海防、凭祥-胡志明、凭祥经沙湾拿吉（老挝）-穆达汉（泰国）-黑木山（马来西亚）3条黄金物流线路的基础上，凭祥市加强与重庆、郑州等地物流园区合作，成功开通东盟国家经凭祥-苏州-满洲里-欧洲、凭祥-郑州-新疆霍尔果斯-欧洲、凭祥-重庆（成都）-新疆阿拉山口-欧洲3条国际物流新线路，推动丝绸之路经济带与中南半岛经济走廊无缝对接。（覃文吉蒋坤宏）</p>
+            </div>
+        </div>
+        <script>
+            function doZoom(size) {
+                document.getElementById('article-font-size').style.fontSize = size + 'pt'
+            }
+            16 </script>
+
+        <!-- 页面尾部 -->
+        <div class="home-foot">
+            <div class="home-foot-content">
+                <div class="foot-link">
+                    <span>友情链接:</span>
+                    <a href="http://www.mva.gov.cn/" target="_blank">
+                        <img src="../public/img/7.jpg">
+                    </a>
+                    <a href="http://www.gxzf.gov.cn/" target="_blank">
+                        <img src="../public/img/8.jpg">
+                    </a>
+                    <a href="http://sy.mca.gov.cn/" target="_blank">
+                        <img src="../public/img/9.jpg">
+                    </a>
+                    <a href="http://www.chinamartyrs.gov.cn/" target="_blank">
+                        <img src="../public/img/10.jpg">
+                    </a>
+                    <a href="http://www.gxmzt.gov.cn/" target="_blank">
+                        <img src="../public/img/11.jpg">
+                    </a>
+                </div>
+                <div class="foot-contact-us">
+                    <p class="first-line">
+                        <span>
+                            <a>联系我们</a>
+                        </span>
+                        <span>
+                            |
+                        </span>
+                        <span>
+                            <a>网站地图</a>
+                        </span>
+                    </p>
+
+                    <p class="second-line">
+                        <span>
+                            版权所有：广西壮族自治区退役军人事务厅 桂ICP备xx号 桂公网安备xx号 网站标识码：xx
+                        </span>
+                    </p>
+
+                    <p class="third-line">
+                        <span>
+                            地址：南宁市兴宁区民主路49号 邮政编码 530012
+                        </span>
+                    </p>
+                    <p class="fourth-line">
+                        <span>
+                            建议使用IE9以上版本、360、Chrome浏览器打开
+                        </span>
+                    </p>
+                </div>
+
+                <div class="foot-icon">
+                    <img src="../public/img/red.png">
+                    <img src="../public/img/jiucuo.png">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="../public/js/jquery-1.10.1.min.js"></script>
 </body>
 
 </html>
